--- a/books/!template.html
+++ b/books/!template.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Template | BookStrap © </title>
+    <title> | BookStrap © </title>
     <link href="../style.css" rel="stylesheet" type="text/css"/>
     <link href="css.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque&display=swap" rel="stylesheet">
@@ -33,19 +33,19 @@
       </div>
     </div>
     <div class="template" >
-      <!-- Cover link in ('LINK')-->
+      <!-- Book Cover-->
       <div class="left_temp" style="background-image: url('LINK');">
       </div>
       <div class="right_temp">
         <div class="tittle">
-          <!-- Title in h2 -->
+          <!-- Title -->
           <h2>Title</h2>
           <h3 style="margin-left:20px; margin-top:-10px">
             by Author
           </h3>
         </div>
         <div class="genres">
-          <!-- Link the genres WITH CLASS LINKY -->
+          <!-- Genres -->
           <h3 style="padding-left: 80px;">PUT HREFS</h3>
           <!-- HREFS Separate with comma if more than 1
           <a class="linky" href="../mystery.html">Mystery</a>
@@ -57,95 +57,92 @@
           <a class="linky" href="../mystery.html">Mystery</a>
           <a class="linky" href="../novel.html">Graphic Novels/Comics</a>
           <a class="linky" href="../romance.html">Romance</a>
-          <a class="linky" href="../sci-fi">Sci-Fi</a>
+          <a class="linky" href="../sci-fi.html">Science Fiction</a>
           <a class="linky" href="../ya.html">Young Adult</a>
           -->
 
         </div>
         <div class="desc">
-          <!-- Summary/Black Blurb in p -->
+          <!-- Black Blurb in p -->
           <p>
             Description
           </p>
         <div>
-        <!--<div class="resources">
-          <h3>Audiobook</h3>
-          <a href="">Audiobook</a>
-          <h3>Purchase Paperbook</h3>
-          <a href=""></a>
-          <h3>Purchase Hardcover</h3>
-          <a href=""></a>
-          <br><br>
-          <h3>Free Resources</h3>
-          
-        </div>-->
-
-
-
-
-
+        <div class="resources">
+          <h2>Resources<h2>
+          <h3><a href="">Audiobook</a></h3>
+          <h3><a href="">Purchase Paperback</a></h3>
+          <h3><a href="">Purchase Hardcover</a></h3>
+          <h3><a href="">Purchase E-Book</a></h3>
+          <h2>Free Resource(s)</h2>
+          <h3><a href="">Audiobook</a></h3>
+          <h3><a href="">E-Book</a></h3>
+          <h3>Sorry, no free resources are available for this book yet!</h3>
+        </div>
         <!-- 
-          Ben
-thewickedking.html - The Wicked King            
-thesilentpatient.html - The Silent Patient
-recursion.html - Recursion
-thetyrantstomb.html - The Tyrant’s Tomb
-pumpkinheads.html - Pumpkinheads
-daisyjonesandthesix.html - Daisy Jones and The Six
-theheartbreakers.html - The Heartbreakers
-thirteengifts.html - 13 Gifts
-thefaultinourstars.html - The Fault In Our Stars
-thephilosopherstone.html - The Philosopher’s Stone
-thefellowshipofthering.html - The Fellowship of The Ring
-prideandprejudice.html - Pride & Prejudice
-thehobbit.html - The Hobbit
-fahrenheit451.html - Fahrenheit 451
-lordoftheflies.html - Lord Of The Flies
-kiterunner.html - Kite Runner
-            Max
-theglasshotel.html - The Glass Hotel
-darlingrosegold.html - Darling Rose Gold
-mrnobody.html - Mr. Nobody
-thevanishedbirds.html - The Vanished Birds
-longbrightriver.html - Long Bright River
-thecitywebecame.html - The City We Became
-thekingdomofback.html - The Kingdom of Back
-behindeverylie.html - Behind Every Lie
-thecallofthewild.html - The Call of The Wild
-nineteeneightyfour.html - 1984
-thegodfather.html - The Godfather
-tokillamockingbird.html - To Kill A Mockingbird
-thecatcherintherye.html - The Catcher In The Rye
-thenameofthewind.html - The Name of the Wind
-twilight.html - Twilight
-          Malika
-thegameofthrones.html - A Game of Thrones
-chosenones.html - Chosen Ones
-avatar.html - Avatar
-thebookthief.html - The Book Thief
-wewishyouluck.html - We Wish You Luck
-thepapergirlofparis.html - The Paper Girl Of Paris
-thecardboardkingdom.html - The Cardboard Kingdom
-herperfectlife.html - Her Perfect Life
-thefirstkisshypothesis.html - The First Kiss Hypothesis
-strangeplanet.html - Strange Planet
-happily.html - Happily Ever After & Everything In Between
-primer.html - Primer
-broughtme.html - You Brought Me The Ocean
-shout.html - Shout
-        Christine
-thetestaments.html - The Testaments
-theinstitute.html - The Institute
-thehungergames.html - The Hunger Games
-theguidethegalaxy.html - The Hitchhiker’s Guide To The Galaxy
-theothermrs.html - The Other Mrs.
-thehateugive.html - The Hate U Give
-lookingforalaska.html - Looking For Alaska
-theperks.html - The Perks of Being A WallFlower
-
-
-
+thewickedking.html - The Wicked King                              DONE    
+thesilentpatient.html - The Silent Patient                        DONE
+recursion.html - Recursion                                        DONE
+thetyrantstomb.html - The Tyrant’s Tomb                           DONE        
+pumpkinheads.html - Pumpkinheads                                  DONE
+daisyjonesandthesix.html - Daisy Jones and The Six                DONE
+theheartbreakers.html - The Heartbreakers                         DONE
+thirteengifts.html - 13 Gifts                                     DONE          
+thefaultinourstars.html - The Fault In Our Stars                  DONE                                             
+thephilosopherstone.html - The Philosopher’s Stone                DONE                        
+thefellowshipofthering.html - The Fellowship of The Ring          DONE                              
+prideandprejudice.html - Pride & Prejudice                        DONE                
+thehobbit.html - The Hobbit                                       DONE 
+fahrenheit451.html - Fahrenheit 451                               DONE         
+lordoftheflies.html - Lord Of The Flies                           DONE             
+kiterunner.html - Kite Runner                                     DONE   
+theglasshotel.html - The Glass Hotel                              DONE          
+darlingrosegold.html - Darling Rose Gold                          DONE              
+mrnobody.html - Mr. Nobody                                        DONE
+thevanishedbirds.html - The Vanished Birds                        DONE                
+longbrightriver.html - Long Bright River                          DONE              
+thecitywebecame.html - The City We Became                         DONE               
+thekingdomofback.html - The Kingdom of Back                       DONE                 
+behindeverylie.html - Behind Every Lie                            DONE  
+thecallofthewild.html - The Call of The Wild                      DONE  
+nineteeneightyfour.html - 1984                                    DONE      
+thegodfather.html - The Godfather                                 DONE         
+tokillamockingbird.html - To Kill A Mockingbird                   DONE                       
+thecatcherintherye.html - The Catcher In The Rye                  DONE                        
+thenameofthewind.html - The Name of the Wind                      DONE                    
+twilight.html - Twilight                                          DONE
+thegameofthrones.html - A Game of Thrones                         DONE                 
+chosenones.html - Chosen Ones                                     DONE     
+avatar.html - Avatar                                              DONE 
+thebookthief.html - The Book Thief                                          
+wewishyouluck.html - We Wish You Luck                                          
+thepapergirlofparis.html - The Paper Girl Of Paris                                          
+thecardboardkingdom.html - The Cardboard Kingdom                                          
+herperfectlife.html - Her Perfect Life                                          
+thefirstkisshypothesis.html - The First Kiss Hypothesis                                          
+strangeplanet.html - Strange Planet                                          
+happily.html - Happily Ever After & Everything In Between                                          
+primer.html - Primer                                          
+broughtme.html - You Brought Me The Ocean                                          
+shout.html - Shout                                                     
+thetestaments.html - The Testaments                                          
+theinstitute.html - The Institute                                          
+thehungergames.html - The Hunger Games                                          
+theguidethegalaxy.html - The Hitchhiker’s Guide To The Galaxy                                          
+theothermrs.html - The Other Mrs.                                          
+thehateugive.html - The Hate U Give                                          
+lookingforalaska.html - Looking For Alaska                                          
+theperks.html - The Perks of Being A WallFlower                                          
+carrie.html - Carrie                                          
+penpal.html - PenPal                                          
+thefacethatmustdie.html - The Face That Must Die                                          
+carrioncomfort.html - Carrion Comfort                                          
+theexorcist.html - The Exorcist                                          
+anna.html - Anna Dressed In Blood                                          
+gonegirl.html - Gone Girl                                          
+thewomaninwhite.html - The Woman In White                                          
 -->
+
       </div>
     </div>
   </body>
