--- a/books/kiterunner.html
+++ b/books/kiterunner.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>The Fault In Our Stars | BookStrap © </title>
+    <title>The Kite Runner | BookStrap © </title>
     <link href="../style.css" rel="stylesheet" type="text/css"/>
     <link href="css.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque&display=swap" rel="stylesheet">
@@ -33,36 +33,38 @@
       </div>
     </div>
     <div class="template" >
-      <!-- Cover link in ('LINK')-->
-      <div class="left_temp" style="background-image: url('https://images-na.ssl-images-amazon.com/images/I/81a4kCNuH+L.jpg');">
+      <!-- Book Cover-->
+      <div class="left_temp" style="background-image: url('https://images-na.ssl-images-amazon.com/images/I/81RUfP0ZOjL.jpg');">
       </div>
       <div class="right_temp">
         <div class="tittle">
           <!-- Title -->
-          <h2>The Fault in Our Stars</h2>
+          <h2>The Kite Runner</h2>
           <h3 style="margin-left:20px; margin-top:-10px">
-            by John Green
+            by Khaled Hosseini
           </h3>
         </div>
         <div class="genres">
-          <!-- Genres -->
-          <h3 style="padding-left: 80px;"><a class="linky" href="../fic.html">Fiction</a>, <a class="linky" href="../romance.html">Romance</a>, <a class="linky" href="../ya.html">Young Adult</a></h3>
+          <!-- Genre -->
+          <h3 style="padding-left: 80px;"><a class="linky" href="../classic.html">Classic</a></h3>
         </div>
         <div class="desc">
           <!-- Black Blurb in p -->
           <p>
-            Despite the tumor-shrinking medical miracle that has bought her a few years, Hazel has never been anything but terminal, her final chapter inscribed upon diagnosis. But when a gorgeous plot twist named Augustus Waters suddenly appears at Cancer Kid Support Group, Hazel's story is about to be completely rewritten.
+            The unforgettable, heartbreaking story of the unlikely friendship between a wealthy boy and the son of his father’s servant, The Kite Runner is a beautifully crafted novel set in a country that is in the process of being destroyed. It is about the power of reading, the price of betrayal, and the possibility of redemption; and an exploration of the power of fathers over sons—their love, their sacrifices, their lies.<br><br>
+
+            A sweeping story of family, love, and friendship told against the devastating backdrop of the history of Afghanistan over the last thirty years, The Kite Runner is an unusual and powerful novel that has become a beloved,one-of-a-kind classic.
           </p>
         <div>
         <div class="resources">
           <h2>Resources<h2>
-          <h3><a href="https://www.amazon.com/The-Fault-in-Our-Stars-audiobook/dp/B006VPAXQY/ref=tmm_aud_swatch_0?_encoding=UTF8&qid=1595644554&sr=8-2">Audiobook</a></h3>
-          <h3><a href="https://www.amazon.com/Fault-Our-Stars-John-Green/dp/014242417X/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1595644554&sr=8-2">Purchase Paperbook</a></h3>
-          <h3><a href="https://www.amazon.com/Fault-Our-Stars-John-Green/dp/0525478817/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1595644554&sr=8-2">Purchase Hardcover</a></h3>
-          <h3><a href="https://www.amazon.com/Fault-Our-Stars-John-Green-ebook/dp/B005ZOBNOI/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=1595644554&sr=8-2">Purchase E-Book</a></h3>
+          <h3><a href="https://www.amazon.com/The-Kite-Runner-Khaled-Hosseini-audiobook/dp/B0000BZ2U8/ref=tmm_aud_swatch_0?_encoding=UTF8&qid=&sr=">Audiobook</a></h3>
+          <h3><a href="https://www.amazon.com/Kite-Runner-Khaled-Hosseini/dp/159463193X">Purchase Paperback</a></h3>
+          <h3><a href="https://www.amazon.com/Kite-Runner-Khaled-Hosseini/dp/1573222453/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=&sr=">Purchase Hardcover</a></h3>
+          <h3><a href="https://www.amazon.com/Kite-Runner-Khaled-Hosseini-ebook/dp/B000OCXGZA/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=&sr=">Purchase E-Books</a></h3>
           <h2>Free Resource(s)</h2>
-          <h3><a href="https://www.youtube.com/watch?v=BxyjfTSXw5U">Audiobook</a></h3>
-          <h3><a href="https://pdfduck.com/the-fault-in-our-stars-by-john-green/">E-Book</a></h3>
+          <h3><a href="https://www.youtube.com/watch?v=MEL2C2Q9Hik">Audiobook</a></h3>
+          <h3><a href="https://pdfduck.com/the-kite-runner-by-khaled-hosseini/">E-Book</a></h3>
         </div>
       </div>
     </div>
