--- a/books/longbrightriver.html
+++ b/books/longbrightriver.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>The Fault In Our Stars | BookStrap © </title>
+    <title>Long Bright River | BookStrap © </title>
     <link href="../style.css" rel="stylesheet" type="text/css"/>
     <link href="css.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque&display=swap" rel="stylesheet">
@@ -33,36 +33,39 @@
       </div>
     </div>
     <div class="template" >
-      <!-- Cover link in ('LINK')-->
-      <div class="left_temp" style="background-image: url('https://images-na.ssl-images-amazon.com/images/I/81a4kCNuH+L.jpg');">
+      <!-- Book Cover-->
+      <div class="left_temp" style="background-image: url('https://m.media-amazon.com/images/I/51Cdq-YP2rL.jpg');">
       </div>
       <div class="right_temp">
         <div class="tittle">
           <!-- Title -->
-          <h2>The Fault in Our Stars</h2>
+          <h2>Long Bright River</h2>
           <h3 style="margin-left:20px; margin-top:-10px">
-            by John Green
+            by Liz Moore
           </h3>
         </div>
         <div class="genres">
           <!-- Genres -->
-          <h3 style="padding-left: 80px;"><a class="linky" href="../fic.html">Fiction</a>, <a class="linky" href="../romance.html">Romance</a>, <a class="linky" href="../ya.html">Young Adult</a></h3>
+          <h3 style="padding-left: 80px;"><a class="linky" href="../mystery.html">Mystery</a>, <a class="linky" href="../thriller.html">Thriller</a></h3>
         </div>
         <div class="desc">
           <!-- Black Blurb in p -->
           <p>
-            Despite the tumor-shrinking medical miracle that has bought her a few years, Hazel has never been anything but terminal, her final chapter inscribed upon diagnosis. But when a gorgeous plot twist named Augustus Waters suddenly appears at Cancer Kid Support Group, Hazel's story is about to be completely rewritten.
+            In a Philadelphia neighborhood rocked by the opioid crisis, two once-inseparable sisters find themselves at odds. One, Kacey, lives on the streets in the vise of addiction. The other, Mickey, walks those same blocks on her police beat. They don't speak anymore, but Mickey never stops worrying about her sibling.<br><br>
+
+            Then Kacey disappears, suddenly, at the same time that a mysterious string of murders begins in Mickey's district, and Mickey becomes dangerously obsessed with finding the culprit--and her sister--before it's too late.<br><br>
+
+            Alternating its present-day mystery with the story of the sisters' childhood and adolescence, Long Bright River is at once heart-pounding and heart-wrenching: a gripping suspense novel that is also a moving story of sisters, addiction, and the formidable ties that persist between place, family, and fate.
           </p>
         <div>
         <div class="resources">
           <h2>Resources<h2>
-          <h3><a href="https://www.amazon.com/The-Fault-in-Our-Stars-audiobook/dp/B006VPAXQY/ref=tmm_aud_swatch_0?_encoding=UTF8&qid=1595644554&sr=8-2">Audiobook</a></h3>
-          <h3><a href="https://www.amazon.com/Fault-Our-Stars-John-Green/dp/014242417X/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1595644554&sr=8-2">Purchase Paperbook</a></h3>
-          <h3><a href="https://www.amazon.com/Fault-Our-Stars-John-Green/dp/0525478817/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1595644554&sr=8-2">Purchase Hardcover</a></h3>
-          <h3><a href="https://www.amazon.com/Fault-Our-Stars-John-Green-ebook/dp/B005ZOBNOI/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=1595644554&sr=8-2">Purchase E-Book</a></h3>
+          <h3><a href="https://www.amazon.com/Long-Bright-River-Liz-Moore-audiobook/dp/B07RLTWRBG/ref=tmm_aud_swatch_0?_encoding=UTF8&qid=&sr=">Audiobook</a></h3>
+          <h3><a href="https://www.amazon.com/Long-Bright-River-Novel-Random/dp/0593152247/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr=">Purchase Paperback</a></h3>
+          <h3><a href="https://www.amazon.com/Long-Bright-River-Liz-Moore/dp/0525540679">Purchase Hardcover</a></h3>
+          <h3><a href="https://www.amazon.com/Long-Bright-River-Liz-Moore-ebook/dp/B07QLJ7P7K/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=&sr=">Purchase E-Book</a></h3>
           <h2>Free Resource(s)</h2>
-          <h3><a href="https://www.youtube.com/watch?v=BxyjfTSXw5U">Audiobook</a></h3>
-          <h3><a href="https://pdfduck.com/the-fault-in-our-stars-by-john-green/">E-Book</a></h3>
+          <h3><a href="https://pdfduck.com/long-bright-river-by-liz-moore/">E-Book</a></h3>
         </div>
       </div>
     </div>
