--- a/books/lordoftheflies.html
+++ b/books/lordoftheflies.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>The Hobbit | BookStrap © </title>
+    <title>Lord of the Flies | BookStrap © </title>
     <link href="../style.css" rel="stylesheet" type="text/css"/>
     <link href="css.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque&display=swap" rel="stylesheet">
@@ -34,35 +34,35 @@
     </div>
     <div class="template" >
       <!-- Book Cover -->
-      <div class="left_temp" style="background-image: url('https://images-na.ssl-images-amazon.com/images/I/91b0C2YNSrL.jpg');">
+      <div class="left_temp" style="background-image: url('https://images-na.ssl-images-amazon.com/images/I/81WUAoL-wFL.jpg');">
       </div>
       <div class="right_temp">
         <div class="tittle">
           <!-- Title -->
-          <h2>The Hobbit</h2>
+          <h2>Lord of the Flies</h2>
           <h3 style="margin-left:20px; margin-top:-10px">
-            by J.R.R. Tolken
+            by William Golding
           </h3>
         </div>
         <div class="genres">
-          <!-- Genres -->
-          <h3 style="padding-left: 80px;"><a class="linky" href="../fantasy.html">Fantasy</a></h3>
+          <!-- Genre -->
+          <h3 style="padding-left: 80px;"><a class="linky" href="../ya.html">Young Adult</a></h3>
         </div>
         <div class="desc">
           <!-- Black Blurb in p -->
           <p>
-            In a hole in the ground there lived a hobbit. Not a nasty, dirty, wet hole, filled with the ends of worms and an oozy smell, nor yet a dry, bare, sandy hole with nothing in it to sit down on or to eat: it was a hobbit-hole, and that means comfort.
+            At the dawn of the next world war, a plane crashes on an uncharted island, stranding a group of schoolboys. At first, with no adult supervision, their freedom is something to celebrate; this far from civilization the boys can do anything they want. Anything. They attempt to forge their own society, failing, however, in the face of terror, sin and evil. And as order collapses, as strange howls echo in the night, as terror begins its reign, the hope of adventure seems as far from reality as the hope of being rescued. Labeled a parable, an allegory, a myth, a morality tale, a parody, a political treatise, even a vision of the apocalypse, Lord of the Flies is perhaps our most memorable novel about “the end of innocence, the darkness of man’s heart.”
           </p>
         <div>
         <div class="resources">
           <h2>Resources<h2>
-          <h3><a href="https://www.amazon.com/The-Hobbit-J-R-R-Tolkien-audiobook/dp/B0099SNV7I/ref=tmm_aud_swatch_0?_encoding=UTF8&qid=1595645243&sr=1-1">Audiobook</a></h3>
-          <h3><a href="https://www.amazon.com/Hobbit-J-R-R-Tolkien/dp/0618260307/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1595645243&sr=1-1">Purchase Paperback</a></h3>
-          <h3><a href="https://www.amazon.com/Hobbit-Pocket-J-R-R-Tolkien/dp/0547928246/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1595645243&sr=1-1">Purchase Hardcover</a></h3>
-          <h3><a href="https://www.amazon.com/Hobbit-75th-Anniversary-J-R-R-Tolkien-ebook/dp/B007978NU6/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=1595645243&sr=1-1">Purchase E-Books</a></h3>
+          <h3><a href="https://www.amazon.com/Lord-of-Flies-William-Golding-audiobook/dp/B0000E69E3/ref=tmm_aud_swatch_0?_encoding=UTF8&qid=1595643424&sr=1-1">Audiobook</a></h3>
+          <h3><a href="https://www.amazon.com/Lord-Flies-William-Golding/dp/1573226122/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1595643424&sr=1-1">Purchase Paperback</a></h3>
+          <h3><a href="https://www.amazon.com/Lord-Flies-Penguin-Drop-Caps/dp/0143124293/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1595643424&sr=1-1">Purchase Hardcover</a></h3>
+          <h3><a href="https://www.amazon.com/Lord-Flies-William-Golding-ebook/dp/B000OCXIRG/ref=sr_1_1?dchild=1&keywords=lord+of+the+flies&qid=1595643424&s=digital-text&sr=1-1">Purchase E-Books</a></h3>
           <h2>Free Resource(s)</h2>
-          <h3><a href="https://www.youtube.com/watch?v=_DppzbpA62g&vl=en">Audiobook</a></h3>
-          <h3><a href="https://www.pdfdrive.com/the-hobbit-e17592270.html">E-Book</a></h3>
+          <h3><a href="https://www.youtube.com/watch?v=fDb-4m4O9QE">Audiobook</a></h3>
+          <h3><a href="https://pdfduck.com/lord-of-the-flies-mass-market-by-william-golding/">E-Book</a></h3>
         </div>
       </div>
     </div>
