--- a/books/thecatcherintherye.html
+++ b/books/thecatcherintherye.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>The Tyrant's Tomb | BookStrap © </title>
+    <title>The Catcher In The Rye | BookStrap © </title>
     <link href="../style.css" rel="stylesheet" type="text/css"/>
     <link href="css.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque&display=swap" rel="stylesheet">
@@ -34,35 +34,34 @@
     </div>
     <div class="template" >
       <!-- Book Cover-->
-      <div class="left_temp" style="background-image: url('https://images-na.ssl-images-amazon.com/images/I/81+AhaPcYwL.jpg');">
+      <div class="left_temp" style="background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSlkgtusShi5_PB619ZbcA5A9wCbRT0DQElxA&usqp=CAU');">
       </div>
       <div class="right_temp">
         <div class="tittle">
           <!-- Title -->
-          <h2>The Tyrants Tomb</h2>
+          <h2>The Catcher In The Rye</h2>
           <h3 style="margin-left:20px; margin-top:-10px">
-            Rick Riodan
+            by J.D. Salinger
           </h3>
         </div>
         <div class="genres">
           <!-- Genres -->
-          <h3 style="padding-left: 80px;"> <a class="linky" href="../fic.html">Fiction</a></h3>
+          <h3 style="padding-left: 80px;"><a class="linky" href="../classic.html">Classic</a></h3>
         </div>
         <div class="desc">
           <!-- Black Blurb in p -->
           <p>
-            It's not easy being Apollo, especially when you've been turned into a human and banished from Olympus. On his path to restoring five ancient oracles and reclaiming his godly powers, Apollo (aka Lester Papadopoulos) has faced both triumphs and tragedies. Now his journey takes him to Camp Jupiter in the San Francisco Bay Area, where the Roman demigods are preparing for a desperate last stand against the evil Triumvirate of Roman emperors. Hazel, Reyna, Frank, Tyson, Ella, and many other old friends will need Apollo's aid to survive the onslaught. Unfortunately, the answer to their salvation lies in the forgotten tomb of a Roman ruler . . . someone even worse than the emperors Apollo has already faced.
+            The hero-narrator of The Catcher in the Rye is an ancient child of sixteen, a native New Yorker named Holden Caulfield. Through circumstances that tend to preclude adult, secondhand description, he leaves his prep school in Pennsylvania and goes underground in New York City for three days. The boy himself is at once too simple and too complex for us to make any final comment about him or his story. Perhaps the safest thing we can say about Holden is that he was born in the world not just strongly attracted to beauty but, almost, hopelessly impaled on it. There are many voices in this novel: children's voices, adult voices, underground voices-but Holden's voice is the most eloquent of all. Transcending his own vernacular, yet remaining marvelously faithful to it, he issues a perfectly articulated cry of mixed pain and pleasure. However, like most lovers and clowns and poets of the higher orders, he keeps most of the pain to, and for, himself. The pleasure he gives away, or sets aside, with all his heart. It is there for the reader who can handle it to keep.
           </p>
         <div>
         <div class="resources">
           <h2>Resources<h2>
-          <h3><a href="https://www.amazon.com/The-Tyrants-Tomb-Rick-Riordan-audiobook/dp/B07LGFNS7L/ref=tmm_aud_swatch_0?_encoding=UTF8&qid=1595648813&sr=1-1-spons">Audiobook</a></h3>
-          <h3><a href="https://www.amazon.com/The-Tyrants-Tomb/dp/0141364041/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1595648813&sr=1-1-spons">Purchase Paperbook</a></h3>
-          <h3><a href="https://www.amazon.com/Tyrants-Tomb-Trials-Apollo-Book/dp/1484746449/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1595648813&sr=1-1-spons">Purchase Hardcover</a></h3>
-          <h3><a href="https://www.amazon.com/Tyrants-Tomb-Trials-Apollo-Book-ebook/dp/B07L4CDFPB/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=1595648813&sr=1-1-spons">Purchase E-Books</a></h3>
+          <h3><a href="https://www.amazon.com/Catcher-Rye-J-D-Salinger/dp/0316769177/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr=">Purchase Paperback</a></h3>
+          <h3><a href="https://www.amazon.com/Catcher-Rye-J-D-Salinger/dp/0316769533/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=&sr=">Purchase Hardcover</a></h3>
+          <h3><a href="https://www.amazon.com/Catcher-Rye-J-D-Salinger-ebook/dp/B07V8HFMTR/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=&sr=">Purchase E-Book</a></h3>
           <h2>Free Resource(s)</h2>
-          <h3><a href="https://tokybook.com/the-tyrants-tomb/">Audiobook</a></h3>
-          <h3><a href="https://pdfduck.com/the-tyrants-tomb-by-rick-riordan/">E-Book</a></h3>
+          <h3><a href="">Audiobook</a></h3> 
+          <h3><a href="https://www.uzickagimnazija.edu.rs/files/Catcher%20in%20the%20Rye.pdf">E-Book</a></h3>
         </div>
       </div>
     </div>
