--- a/books/theguidethegalaxy.html
+++ b/books/theguidethegalaxy.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>The Testaments | BookStrap © </title>
+    <title>The Hitchhiker's Guide to the Galaxy | BookStrap © </title>
     <link href="../style.css" rel="stylesheet" type="text/css"/>
     <link href="css.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque&display=swap" rel="stylesheet">
@@ -34,14 +34,14 @@
     </div>
     <div class="template" >
       <!-- Cover link in ('LINK')-->
-      <div class="left_temp" style="background-image: url('https://cdn.glitch.com/82af02a2-d7b4-4dc8-a00b-c734d75ddef6%2Fed6e080c-16d1-4caf-82d3-3c36c43881ff.image.png?v=1595274803820');">
+      <div class="left_temp" style="background-image: url('https://m.media-amazon.com/images/I/51X7zBMf9bL.jpg');">
       </div>
       <div class="right_temp">
         <div class="tittle">
           <!-- Title in h2 -->
-          <h2>The Testaments</h2>
+          <h2>s</h2>
           <h3 style="margin-left:20px; margin-top:-10px">
-            by Margaret Atwood
+            by Douglas Adams, Eoin Colfer, and Thomas Tidholm
           </h3>
         </div>
         <div class="genres">
@@ -65,9 +65,8 @@
         <div class="desc">
           <!-- Summary/Black Blurb in p -->
           <p>
-More than fifteen years after the events of The Handmaid's Tale, the theocratic regime of the Republic of Gilead maintains its grip on power, but there are signs it is beginning to rot from within. At this crucial moment, the lives of three radically different women converge, with potentially explosive results.
-Two have grown up as part of the first generation to come of age in the new order. The testimonies of these two young women are joined by a third: Aunt Lydia.  Her complex past and uncertain future unfold in surprising and pivotal ways.
-With The Testaments, Margaret Atwood opens up the innermost workings of Gilead, as each woman is forced to come to terms with who she is, and how far she will go for what she believes.
+            The Hitchhiker’s Guide follows the story of a hapless human called Arthur Dent, who is saved from Earth’s destruction by aliens with just seconds to spare by his good friend Ford Prefect. Prefect, who Dent at first believes to be human, actually turns out to be an alien working for something called the Hitchhiker’s Guide to the Galaxy — sort of a combination travel guide/Wikipedia for intergalactic travelers roaming about the universe by grabbing rides on passing spacecraft.
+Dent and Prefect wind up on a ship stolen by President of the Galaxy Zaphod Beeblebrox. Along with another human runaway and a depressed robot, the crew find themselves in a serious of perilous adventures one after the other and it’s all good fun with a great story that holds up in its own right while also poking a lot of fun at the generally very serious science-fiction genre.
           </p>
         <div>
         <div class="resources">
