--- a/books/theheartbreakers.html
+++ b/books/theheartbreakers.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Template | BookStrap © </title>
+    <title>The Heartbreakers | BookStrap © </title>
     <link href="../style.css" rel="stylesheet" type="text/css"/>
     <link href="css.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque&display=swap" rel="stylesheet">
@@ -33,127 +33,40 @@
       </div>
     </div>
     <div class="template" >
-      <!-- Cover link in ('LINK')-->
-      <div class="left_temp" style="background-image: url('https://images-na.ssl-images-amazon.com/images/I/51in6gTMWnL._SX331_BO1,204,203,200_.jpg');">
+      <!-- Book Cover -->
+      <div class="left_temp" style="background-image: url('https://m.media-amazon.com/images/I/51vhejJoziL.jpg');">
       </div>
       <div class="right_temp">
         <div class="tittle">
-          <!-- Title in h2 -->
+          <!-- Title -->
           <h2>The Heartbreakers</h2>
           <h3 style="margin-left:20px; margin-top:-10px">
             by Ali Novak
           </h3>
         </div>
         <div class="genres">
-          <!-- Link the genres WITH CLASS LINKY -->
+          <!-- Genres -->
           <h3 style="padding-left: 80px;"><a class="linky" href="../fic.html">Fiction</a>, <a class="linky" href="../romance.html">Romance</a></h3>
-          <!-- HREFS Separate with comma if more than 1
-          <a class="linky" href="../mystery.html">Mystery</a>
-          <a class="linky" href="../thriller.html">Thriller</a>
-          <a class="linky" href="../classic.html">Classic</a>
-          <a class="linky" href="../fantasy.html">Fantasy</a>
-          <a class="linky" href="../fic.html">Fiction</a>
-          <a class="linky" href="../horror.html">Horror</a>
-          <a class="linky" href="../mystery.html">Mystery</a>
-          <a class="linky" href="../novel.html">Graphic Novels/Comics</a>
-          <a class="linky" href="../romance.html">Romance</a>
-          <a class="linky" href="../sci-fi">Sci-Fi</a>
-          <a class="linky" href="../ya.html">Young Adults</a>
-          -->
-
         </div>
         <div class="desc">
-          <!-- Summary/Black Blurb in p -->
+          <!-- Black Blurb in p -->
           <p>
-            Everyone knows Daisy Jones & The Six: The band's album Aurora came to define the rock 'n' roll era of the late seventies, and an entire generation of girls wanted to grow up to be Daisy. But no one knows the reason behind the group's split on the night of their final concert at Chicago Stadium on July 12, 1979 . . . until now.<br><Br>
+            Stella will do anything for her sick sister, Cara—even stand in line for an autographed Heartbreakers CD...for four hours. She's totally winning best birthday gift this year. At least she met a cute boy with soft brown hair and gorgeous blue eyes while getting her caffeine fix. Too bad she'll never see him again.<br><br>
 
-Daisy is a girl coming of age in L.A. in the late sixties, sneaking into clubs on the Sunset Strip, sleeping with rock stars, and dreaming of singing at the Whisky a Go Go. The sex and drugs are thrilling, but it’s the rock 'n' roll she loves most. By the time she’s twenty, her voice is getting noticed, and she has the kind of heedless beauty that makes people do crazy things.<br><Br>
+            Except, Stella's life has suddenly turned into a cheesy love song. Because Starbucks Boy is Oliver Perry – lead singer for the Heartbreakers. And even after she calls his music crap, Oliver still gives Stella his phone number. And whispers quotes from her favorite Disney movie in her ear. OMG, what is her life?<br><br>
 
-Also getting noticed is The Six, a band led by the brooding Billy Dunne. On the eve of their first tour, his girlfriend Camila finds out she’s pregnant, and with the pressure of impending fatherhood and fame, Billy goes a little wild on the road.<br><Br>
-
-Daisy and Billy cross paths when a producer realizes that the key to supercharged success is to put the two together. What happens next will become the stuff of legend.<br><Br>
-
-The making of that legend is chronicled in this riveting and unforgettable novel, written as an oral history of one of the biggest bands of the seventies. Taylor Jenkins Reid is a talented writer who takes her work to a new level with Daisy Jones & The Six, brilliantly capturing a place and time in an utterly distinctive voice.
+            But how can Stella even think about being with Oliver — dating and laughing and pulling pranks with the band — when her sister could be dying of cancer?
           </p>
         <div>
-        <!--<div class="resources">
-          <h3>Audiobook</h3>
-          <a href="">Audiobook</a>
-          <h3>Purchase Paperbook</h3>
-          <a href=""></a>
-          <h3>Purchase Hardcover</h3>
-          <a href=""></a>
-          <br><br>
-          <h3>Free Resources</h3>
-          
-        </div>-->
-
-
-
-
-
-        <!-- 
-          Ben
-thewickedking.html - The Wicked King            
-thesilentpatient.html - The Silent Patient
-recursion.html - Recursion
-thetyrantstomb.html - The Tyrant’s Tomb
-pumpkinheads.html - Pumpkinheads
-daisyjonesandthesix.html - Daisy Jones and The Six
-theheartbreakers.html - The Heartbreakers
-thirteengifts.html - 13 Gifts
-thefaultinourstars.html - The Fault In Our Stars
-thephilosopherstone.html - The Philosopher’s Stone
-thefellowshipofthering.html - The Fellowship of The Ring
-prideandprejudice.html - Pride & Prejudice
-thehobbit.html - The Hobbit
-fahrenheit451.html - Fahrenheit 451
-lordoftheflies.html - Lord Of The Flies
-kiterunner.html - Kite Runner
-            Max
-theglasshotel.html - The Glass Hotel
-darlingrosegold.html - Darling Rose Gold
-mrnobody.html - Mr. Nobody
-thevanishedbirds.html - The Vanished Birds
-longbrightriver.html - Long Bright River
-thecitywebecame.html - The City We Became
-thekingdomofback.html - The Kingdom of Back
-behindeverylie.html - Behind Every Lie
-thecallofthewild.html - The Call of The Wild
-nineteeneightyfour.html - 1984
-thegodfather.html - The Godfather
-tokillamockingbird.html - To Kill A Mockingbird
-thecatcherintherye.html - The Catcher In The Rye
-thenameofthewind.html - The Name of the Wind
-twilight.html - Twilight
-          Malika
-thegameofthrones.html - A Game of Thrones
-chosenones.html - Chosen Ones
-avatar.html - Avatar
-thebookthief.html - The Book Thief
-wewishyouluck.html - We Wish You Luck
-thepapergirlofparis.html - The Paper Girl Of Paris
-thecardboardkingdom.html - The Cardboard Kingdom
-herperfectlife.html - Her Perfect Life
-thefirstkisshypothesis.html - The First Kiss Hypothesis
-strangeplanet.html - Strange Planet
-happily.html - Happily Ever After & Everything In Between
-primer.html - Primer
-broughtme.html - You Brought Me The Ocean
-shout.html - Shout
-        Christine
-thetestaments.html - The Testaments
-theinstitute.html - The Institute
-thehungergames.html - The Hunger Games
-theguidethegalaxy.html - The Hitchhiker’s Guide To The Galaxy
-theothermrs.html - The Other Mrs.
-thehateugive.html - The Hate U Give
-lookingforalaska.html - Looking For Alaska
-theperks.html - The Perks of Being A WallFlower
-
-
-
--->
+        <div class="resources">
+          <h2>Resources<h2>
+          <h3><a href="https://www.amazon.com/The-Heartbreakers-Ali-Novak-audiobook/dp/B01D8Z3G0Y/ref=tmm_aud_swatch_0?_encoding=UTF8&qid=1595644955&sr=1-1">Audiobook</a></h3>
+          <h3><a href="https://www.amazon.com/Heartbreakers-Heartbreak-Chronicles-Ali-Novak/dp/1492612561/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1595644955&sr=1-1">Purchase Paperback</a></h3>
+          <h3><a href="https://www.amazon.com/Heartbreakers-Heartbreak-Chronicles-Book-ebook/dp/B00UTWFVDK/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=1595644955&sr=1-1">Purchase E-Books</a></h3>
+          <h2>Free Resource(s)<h2>
+          <h3><a href="https://www.kobo.com/us/en/audiobook/the-heartbreakers-2">Audiobook</a></h3>
+          <h3><a href="https://www.epub.pub/book/the-heartbreakers-by-ali-novak">E-Book</a></h3>
+        </div>
       </div>
     </div>
   </body>
