--- a/books/thephilosopherstone.html
+++ b/books/thephilosopherstone.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Template | BookStrap © </title>
+    <title>The Philosopher's Stone | BookStrap © </title>
     <link href="../style.css" rel="stylesheet" type="text/css"/>
     <link href="css.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque&display=swap" rel="stylesheet">
@@ -33,125 +33,41 @@
       </div>
     </div>
     <div class="template" >
-      <!-- Cover link in ('LINK')-->
+      <!-- Book Cover -->
       <div class="left_temp" style="background-image: url('https://images-na.ssl-images-amazon.com/images/I/81iqZ2HHD-L.jpg');">
       </div>
       <div class="right_temp">
         <div class="tittle">
-          <!-- Title in h2 -->
+          <!-- Title -->
           <h2>The Philosopher's Stone</h2>
           <h3 style="margin-left:20px; margin-top:-10px">
             by J.K. Rowling
           </h3>
         </div>
         <div class="genres">
-          <!-- Link the genres WITH CLASS LINKY -->
-          <h3 style="padding-left: 80px;"><a class="linky" href="../fantasy.html">Fantasy</a></h3>
-          <!-- HREFS Separate with comma if more than 1
-          <a class="linky" href="../mystery.html">Mystery</a>
-          <a class="linky" href="../thriller.html">Thriller</a>
-          <a class="linky" href="../classic.html">Classic</a>
-          <a class="linky" href="../fantasy.html">Fantasy</a>
-          <a class="linky" href="../fic.html">Fiction</a>
-          <a class="linky" href="../horror.html">Horror</a>
-          <a class="linky" href="../mystery.html">Mystery</a>
-          <a class="linky" href="../novel.html">Graphic Novels/Comics</a>
-          <a class="linky" href="../romance.html">Romance</a>
-          <a class="linky" href="../sci-fi">Sci-Fi</a>
-          <a class="linky" href="../ya.html">Young Adult</a>
-          -->
-
+          <!-- Genre -->
+          <h3 style="padding-left: 80px;"><a class="linky" href="../fantasy.html">Fantasy</a>, <a class="linky" href="../fic.html">Fiction</a></h3>
         </div>
         <div class="desc">
-          <!-- Summary/Black Blurb in p -->
+          <!-- Black Blurb in p -->
           <p>
             Harry Potter's life is miserable. His parents are dead and he's stuck with his heartless relatives, who force him to live in a tiny closet under the stairs. But his fortune changes when he receives a letter that tells him the truth about himself: he's a wizard. A mysterious visitor rescues him from his relatives and takes him to his new home, Hogwarts School of Witchcraft and Wizardry.<br><br>
 
-After a lifetime of bottling up his magical powers, Harry finally feels like a normal kid. But even within the Wizarding community, he is special. He is the boy who lived: the only person to have ever survived a killing curse inflicted by the evil Lord Voldemort, who launched a brutal takeover of the Wizarding world, only to vanish after failing to kill Harry.<br><br>
+            After a lifetime of bottling up his magical powers, Harry finally feels like a normal kid. But even within the Wizarding community, he is special. He is the boy who lived: the only person to have ever survived a killing curse inflicted by the evil Lord Voldemort, who launched a brutal takeover of the Wizarding world, only to vanish after failing to kill Harry.<br><br>
 
-Though Harry's first year at Hogwarts is the best of his life, not everything is perfect. There is a dangerous secret object hidden within the castle walls, and Harry believes it's his responsibility to prevent it from falling into evil hands. But doing so will bring him into contact with forces more terrifying than he ever could have imagined.<br><br>
-
-Full of sympathetic characters, wildly imaginative situations, and countless exciting details, the first installment in the series assembles an unforgettable magical world and sets the stage for many high-stakes adventures to come.<br><br>
+            Though Harry's first year at Hogwarts is the best of his life, not everything is perfect. There is a dangerous secret object hidden within the castle walls, and Harry believes it's his responsibility to prevent it from falling into evil hands. But doing so will bring him into contact with forces more terrifying than he ever could have imagined.<br><br>
           </p>
         <div>
-        <!--<div class="resources">
-          <h3>Audiobook</h3>
-          <a href="">Audiobook</a>
-          <h3>Purchase Paperbook</h3>
-          <a href=""></a>
-          <h3>Purchase Hardcover</h3>
-          <a href=""></a>
-          <br><br>
-          <h3>Free Resources</h3>
-          
-        </div>-->
-
-
-
-
-
-        <!-- 
-          Ben
-thewickedking.html - The Wicked King            
-thesilentpatient.html - The Silent Patient
-recursion.html - Recursion
-thetyrantstomb.html - The Tyrant’s Tomb
-pumpkinheads.html - Pumpkinheads
-daisyjonesandthesix.html - Daisy Jones and The Six
-theheartbreakers.html - The Heartbreakers
-thirteengifts.html - 13 Gifts
-thefaultinourstars.html - The Fault In Our Stars
-thephilosopherstone.html - The Philosopher’s Stone
-thefellowshipofthering.html - The Fellowship of The Ring
-prideandprejudice.html - Pride & Prejudice
-thehobbit.html - The Hobbit
-fahrenheit451.html - Fahrenheit 451
-lordoftheflies.html - Lord Of The Flies
-kiterunner.html - Kite Runner
-            Max
-theglasshotel.html - The Glass Hotel
-darlingrosegold.html - Darling Rose Gold
-mrnobody.html - Mr. Nobody
-thevanishedbirds.html - The Vanished Birds
-longbrightriver.html - Long Bright River
-thecitywebecame.html - The City We Became
-thekingdomofback.html - The Kingdom of Back
-behindeverylie.html - Behind Every Lie
-thecallofthewild.html - The Call of The Wild
-nineteeneightyfour.html - 1984
-thegodfather.html - The Godfather
-tokillamockingbird.html - To Kill A Mockingbird
-thecatcherintherye.html - The Catcher In The Rye
-thenameofthewind.html - The Name of the Wind
-twilight.html - Twilight
-          Malika
-thegameofthrones.html - A Game of Thrones
-chosenones.html - Chosen Ones
-avatar.html - Avatar
-thebookthief.html - The Book Thief
-wewishyouluck.html - We Wish You Luck
-thepapergirlofparis.html - The Paper Girl Of Paris
-thecardboardkingdom.html - The Cardboard Kingdom
-herperfectlife.html - Her Perfect Life
-thefirstkisshypothesis.html - The First Kiss Hypothesis
-strangeplanet.html - Strange Planet
-happily.html - Happily Ever After & Everything In Between
-primer.html - Primer
-broughtme.html - You Brought Me The Ocean
-shout.html - Shout
-        Christine
-thetestaments.html - The Testaments
-theinstitute.html - The Institute
-thehungergames.html - The Hunger Games
-theguidethegalaxy.html - The Hitchhiker’s Guide To The Galaxy
-theothermrs.html - The Other Mrs.
-thehateugive.html - The Hate U Give
-lookingforalaska.html - Looking For Alaska
-theperks.html - The Perks of Being A WallFlower
-
-
-
--->
+        <div class="resources">
+          <h2>Resources<h2>
+          <h3><a href="https://www.amazon.com/Harry-Potter-Sorcerers-Stone-Book/dp/B017V4IMVQ/ref=tmm_aud_swatch_0?_encoding=UTF8&qid=1595648041&sr=8-2">Audiobook</a></h3>
+          <h3><a href="https://www.amazon.com/Harry-Potter-Sorcerers-Stone-Rowling/dp/133829914X/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1595648041&sr=8-2">Purchase Paperbook</a></h3>
+          <h3><a href="https://www.amazon.com/Harry-Potter-Sorcerers-Stone-Rowling/dp/0590353403/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1595648041&sr=8-2">Purchase Hardcover</a></h3>
+          <h3><a href="https://www.amazon.com/Harry-Potter-Sorcerers-Stone-Rowling-ebook/dp/B0192CTMYG/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=1595648041&sr=8-2">Purchase E-Books</a></h3>
+          <h2>Free Resource(s)</h2>
+          <h3><a href="https://hpaudiobooks.club/philosopher-stone-stephen-fry/">Audiobook</a></h3>
+          <h3><a href="https://getfreestories.weebly.com/uploads/7/9/0/2/79020522/harry_potter_and_the_sorcerers_-_j.k._rowling.pdf">E-Book</a></h3>
+        </div>
       </div>
     </div>
   </body>
