--- a/books/twilight.html
+++ b/books/twilight.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>The Fault In Our Stars | BookStrap © </title>
+    <title>Twilight | BookStrap © </title>
     <link href="../style.css" rel="stylesheet" type="text/css"/>
     <link href="css.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque&display=swap" rel="stylesheet">
@@ -33,36 +33,42 @@
       </div>
     </div>
     <div class="template" >
-      <!-- Cover link in ('LINK')-->
-      <div class="left_temp" style="background-image: url('https://images-na.ssl-images-amazon.com/images/I/81a4kCNuH+L.jpg');">
+      <!-- Book Cover-->
+      <div class="left_temp" style="background-image: url('https://upload.wikimedia.org/wikipedia/en/1/1d/Twilightbook.jpg');">
       </div>
       <div class="right_temp">
         <div class="tittle">
           <!-- Title -->
-          <h2>The Fault in Our Stars</h2>
+          <h2>Twilight</h2>
           <h3 style="margin-left:20px; margin-top:-10px">
-            by John Green
+            by Stephanie Meyer
           </h3>
         </div>
         <div class="genres">
           <!-- Genres -->
-          <h3 style="padding-left: 80px;"><a class="linky" href="../fic.html">Fiction</a>, <a class="linky" href="../romance.html">Romance</a>, <a class="linky" href="../ya.html">Young Adult</a></h3>
+          <h3 style="padding-left: 80px;"><a class="linky" href="../fantasy.html">Fantasy</a>, <a class="linky" href="../horror.html">Horror</a>, <a class="linky" href="../romance.html">Romance</a></h3>
         </div>
         <div class="desc">
           <!-- Black Blurb in p -->
           <p>
-            Despite the tumor-shrinking medical miracle that has bought her a few years, Hazel has never been anything but terminal, her final chapter inscribed upon diagnosis. But when a gorgeous plot twist named Augustus Waters suddenly appears at Cancer Kid Support Group, Hazel's story is about to be completely rewritten.
+            First, Edward was a vampire.<br><br>
+
+            Second, there was a part of him—and I didn't know how dominant that part might be—that thirsted for my blood.<br><br>
+
+            And third, I was unconditionally and irrevocably in love with him.<br><br>
+
+            Deeply seductive and extraordinarily suspenseful, Twilight is a love story with bite.
           </p>
         <div>
         <div class="resources">
           <h2>Resources<h2>
-          <h3><a href="https://www.amazon.com/The-Fault-in-Our-Stars-audiobook/dp/B006VPAXQY/ref=tmm_aud_swatch_0?_encoding=UTF8&qid=1595644554&sr=8-2">Audiobook</a></h3>
-          <h3><a href="https://www.amazon.com/Fault-Our-Stars-John-Green/dp/014242417X/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1595644554&sr=8-2">Purchase Paperbook</a></h3>
-          <h3><a href="https://www.amazon.com/Fault-Our-Stars-John-Green/dp/0525478817/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1595644554&sr=8-2">Purchase Hardcover</a></h3>
-          <h3><a href="https://www.amazon.com/Fault-Our-Stars-John-Green-ebook/dp/B005ZOBNOI/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=1595644554&sr=8-2">Purchase E-Book</a></h3>
+          <h3><a href="https://www.amazon.com/Twilight-Stephenie-Meyer-audiobook/dp/B000BO2D64/ref=tmm_aud_swatch_0?_encoding=UTF8&qid=&sr=">Audiobook</a></h3>
+          <h3><a href="https://www.amazon.com/Twilight-Saga-Book-1/dp/0316015849">Purchase Paperback</a></h3>
+          <h3><a href="https://www.amazon.com/Twilight-Stephenie-Meyer/dp/0316160172/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=&sr=">Purchase Hardcover</a></h3>
+          <h3><a href="https://www.amazon.com/Twilight-Saga-Book-1-ebook/dp/B000QRIGLW/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=&sr=">Purchase E-Book</a></h3>
           <h2>Free Resource(s)</h2>
-          <h3><a href="https://www.youtube.com/watch?v=BxyjfTSXw5U">Audiobook</a></h3>
-          <h3><a href="https://pdfduck.com/the-fault-in-our-stars-by-john-green/">E-Book</a></h3>
+          <h3><a href="https://www.youtube.com/watch?v=z2XOiGcAX-4">Audiobook</a></h3>
+          <h3><a href="https://www.pdfdrive.com/stephenie-meyer-1-twilightpdf-e37911795.html">E-Book</a></h3>
         </div>
       </div>
     </div>
