--- a/classic.html
+++ b/classic.html
@@ -141,7 +141,7 @@
             </div>
             <div class="flip-card-text">
               <h2>To Kill a Mockingbird</h2>
-              <p class="title"></p>
+              <p class="title">An American Classic</p>
             </div>
           </div>
           <div class="flip-card-back">
@@ -149,7 +149,7 @@
               <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTGSMLsdEOAClPTHYz5aIb--12Mpt6kDT8P8Q&usqp=CAU"/>
             </div>
             <div class="flip-card-text">
-              <h2 class="title">An American Classic<a href="books/tokillamockingbird.html">To Kill a Mockingbird</a></h2>
+              <h2 class="title"><a href="books/tokillamockingbird.html">To Kill a Mockingbird</a></h2>
               <p class="genre"><a href="classic.html">Classic</a></p>
             </div>
           </div>
@@ -196,7 +196,7 @@
             </div>
             <div class="flip-card-text">
               <h2 class="title"><a href="books/prideandprejudice.html">Pride and Prejudice</a></h2>
-              <p class="genre"><a href="romance.html">Romance</a>, <a href="classic.html">Classic</a></p>
+              <p class="genre"><a href="classic.html">Classic</a>, <a href="romance.html">Romance</a></p>
             </div>
           </div>
         </div>
