--- a/fantasy.html
+++ b/fantasy.html
@@ -54,7 +54,7 @@
             </div>
             <div class="flip-card-text">
               <h2 class="title"><a href="books/thewickedking.html">The Wicked King</a></h2>
-              <p class="genre"><a href="fantasy.html">Fantasy</a>, <a href="ya.html">Young Adults</a></p>
+              <p class="genre"><a href="fantasy.html">Fantasy</a>, <a href="ya.html">Young Adult</a></p>
             </div>
           </div>
         </div>
