--- a/mystery.html
+++ b/mystery.html
@@ -1,4 +1,4 @@
-x<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -191,8 +191,8 @@ x<!DOCTYPE html>
                <img src="https://images-na.ssl-images-amazon.com/images/I/71303FC9n7L.jpg" />
              </div>
              <div class="flip-card-text">
-               <h2 class="title"><a href="books/.html">Gone Girl</a></h2>
-               <p class="genre"><a href="thriller.html">Thriller</a>, <a href="mystery.html">Mystery</a></p>
+               <h2 class="title"><a href="books/gonegirl.html">Gone Girl</a></h2>
+               <p class="genre"><a href="mystery.html">Mystery</a>, <a href="thriller.html">Thriller</a></p>
              </div>
            </div>
          </div>
@@ -214,7 +214,7 @@ x<!DOCTYPE html>
                <img src="https://images-cdn.reedsy.com/discovery/image/1950/image/large_114835b27453c78d107886f047e2490b0334dab5.jpg" />
              </div>
              <div class="flip-card-text">
-               <h2 class="title"><a href="books/.html">The Woman In White</a></h2>
+               <h2 class="title"><a href="books/thewomaninwhite.html">The Woman In White</a></h2>
                <p class="genre"><a href="mystery.html">Mystery</a></p>
              </div>
            </div>
