--- a/books/daisyjonesandthesix.html
+++ b/books/daisyjonesandthesix.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Template | BookStrap © </title>
+    <title>Daisy Jones & The Six | BookStrap © </title>
     <link href="../style.css" rel="stylesheet" type="text/css"/>
     <link href="css.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque&display=swap" rel="stylesheet">
@@ -33,12 +33,12 @@
       </div>
     </div>
     <div class="template" >
-      <!-- Cover link in ('LINK')-->
+      <!-- Book Cover-->
       <div class="left_temp" style="background-image: url('https://cdn.glitch.com/82af02a2-d7b4-4dc8-a00b-c734d75ddef6%2F591fa234-1189-4a2d-a446-e0d80bd393cb.image.png?v=1595275992952');">
       </div>
       <div class="right_temp">
         <div class="tittle">
-          <!-- Title in h2 -->
+          <!-- Title -->
           <h2>Daisy Jones & the Six</h2>
           <h3 style="margin-left:20px; margin-top:-10px">
             by Taylor Jenkins Reids
@@ -47,44 +47,29 @@
         <div class="genres">
           <!-- Link the genres WITH CLASS LINKY -->
           <h3 style="padding-left: 80px;"><a class="linky" href="../fic.html">Fiction</a>, <a class="linky" href="../romance.html">Romance</a></h3>
-          <!-- HREFS Separate with comma if more than 1
-          <a class="linky" href="../mystery.html">Mystery</a>
-          <a class="linky" href="../thriller.html">Thriller</a>
-          <a class="linky" href="../classic.html">Classic</a>
-          <a class="linky" href="../fantasy.html">Fantasy</a>
-          <a class="linky" href="../fic.html">Fiction</a>
-          <a class="linky" href="../horror.html">Horror</a>
-          <a class="linky" href="../mystery.html">Mystery</a>
-          <a class="linky" href="../novel.html">Graphic Novels/Comics</a>
-          <a class="linky" href="../romance.html">Romance</a>
-          <a class="linky" href="../sci-fi">Sci-Fi</a>
-          <a class="linky" href="../ya.html">Young Adults</a>
-          -->
-
         </div>
         <div class="desc">
-          <!-- Summary/Black Blurb in p -->
+          <!-- Black Blurb in p -->
           <p>
             Everyone knows Daisy Jones & The Six: The band's album Aurora came to define the rock 'n' roll era of the late seventies, and an entire generation of girls wanted to grow up to be Daisy. But no one knows the reason behind the group's split on the night of their final concert at Chicago Stadium on July 12, 1979 . . . until now.<br><BR>
 
-Daisy is a girl coming of age in L.A. in the late sixties, sneaking into clubs on the Sunset Strip, sleeping with rock stars, and dreaming of singing at the Whisky a Go Go. The sex and drugs are thrilling, but it’s the rock 'n' roll she loves most. By the time she’s twenty, her voice is getting noticed, and she has the kind of heedless beauty that makes people do crazy things.<br><BR>
+            Daisy is a girl coming of age in L.A. in the late sixties, sneaking into clubs on the Sunset Strip, sleeping with rock stars, and dreaming of singing at the Whisky a Go Go. The sex and drugs are thrilling, but it’s the rock 'n' roll she loves most. By the time she’s twenty, her voice is getting noticed, and she has the kind of heedless beauty that makes people do crazy things.<br><BR>
 
-Also getting noticed is The Six, a band led by the brooding Billy Dunne. On the eve of their first tour, his girlfriend Camila finds out she’s pregnant, and with the pressure of impending fatherhood and fame, Billy goes a little wild on the road.<br><BR>
+            Also getting noticed is The Six, a band led by the brooding Billy Dunne. On the eve of their first tour, his girlfriend Camila finds out she’s pregnant, and with the pressure of impending fatherhood and fame, Billy goes a little wild on the road.<br><BR>
 
-Daisy and Billy cross paths when a producer realizes that the key to supercharged success is to put the two together. What happens next will become the stuff of legend.
+            Daisy and Billy cross paths when a producer realizes that the key to supercharged success is to put the two together. What happens next will become the stuff of legend.
           </p>
         <div>
-        <!--<div class="resources">
-          <h3>Audiobook</h3>
-          <a href="">Audiobook</a>
-          <h3>Purchase Paperbook</h3>
-          <a href=""></a>
-          <h3>Purchase Hardcover</h3>
-          <a href=""></a>
-          <br><br>
-          <h3>Free Resources</h3>
+        <div class="resources">
+          <h2>Resources<h2>
+          <h3><a href="https://www.amazon.com/Daisy-Jones-Six-audiobook/dp/B07K8WGT23/ref=tmm_aud_swatch_0?_encoding=UTF8&qid=1595642582&sr=8-2">Audiobook</a></h3>
+          <h3><a href="https://www.amazon.com/Daisy-Jones-Taylor-Jenkins-Reid/dp/1524798649/ref=sr_1_2?dchild=1&keywords=daisy+jones+and+the+six&qid=1595642582&sr=8-2">Purchase Paperback</a></h3>
+          <h3><a href="https://www.amazon.com/Daisy-Jones-Six-audiobook/dp/B07K8WGT23/ref=tmm_aud_swatch_0?_encoding=UTF8&qid=1595642582&sr=8-2">Purchase Hardcover</a></h3>
+          <h2>Free Resource(s)</h2>
+          <h3><a href="https://www.youtube.com/watch?v=uaWw5QTtPfM">Audiobook</a></h3>
+          <h3><a href="https://pdfduck.com/daisy-jones-the-six-by-taylor-jenkins-reid/">E-Book</a></h3>
           
-        </div>-->
+        </div>
 
 
 
