--- a/books/fahrenheit451.html
+++ b/books/fahrenheit451.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>The Fault In Our Stars | BookStrap © </title>
+    <title>Fahrenheit 451 | BookStrap © </title>
     <link href="../style.css" rel="stylesheet" type="text/css"/>
     <link href="css.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque&display=swap" rel="stylesheet">
@@ -33,36 +33,39 @@
       </div>
     </div>
     <div class="template" >
-      <!-- Cover link in ('LINK')-->
-      <div class="left_temp" style="background-image: url('https://images-na.ssl-images-amazon.com/images/I/81a4kCNuH+L.jpg');">
+      <!-- Book Cover-->
+      <div class="left_temp" style="background-image: url('https://i.harperapps.com/hcanz/covers/9780006546061/x293.jpg');">
       </div>
       <div class="right_temp">
         <div class="tittle">
           <!-- Title -->
-          <h2>The Fault in Our Stars</h2>
+          <h2>Farenheit 451</h2>
           <h3 style="margin-left:20px; margin-top:-10px">
-            by John Green
+            by Ray Bradbury
           </h3>
         </div>
         <div class="genres">
-          <!-- Genres -->
-          <h3 style="padding-left: 80px;"><a class="linky" href="../fic.html">Fiction</a>, <a class="linky" href="../romance.html">Romance</a>, <a class="linky" href="../ya.html">Young Adult</a></h3>
+          <!-- Genre -->
+          <h3 style="padding-left: 80px;"><a class="linky" href="../fic.html">Fiction</a></h3>
         </div>
         <div class="desc">
           <!-- Black Blurb in p -->
           <p>
-            Despite the tumor-shrinking medical miracle that has bought her a few years, Hazel has never been anything but terminal, her final chapter inscribed upon diagnosis. But when a gorgeous plot twist named Augustus Waters suddenly appears at Cancer Kid Support Group, Hazel's story is about to be completely rewritten.
+            Guy Montag is a fireman. In his world, where television rules and literature is on the brink of extinction, firemen start fires rather than put them out. His job is to destroy the most illegal of commodities, the printed book, along with the houses in which they are hidden.<br><br>
+
+            Montag never questions the destruction and ruin his actions produce, returning each day to his bland life and wife, Mildred, who spends all day with her television 'family'. But then he meets an eccentric young neighbor, Clarisse, who introduces him to a past where people did not live in fear and to a present where one sees the world through the ideas in books instead of the mindless chatter of television.<br><br>
+
+            When Mildred attempts suicide and Clarisse suddenly disappears, Montag begins to question everything he has ever known.
           </p>
         <div>
         <div class="resources">
           <h2>Resources<h2>
-          <h3><a href="https://www.amazon.com/The-Fault-in-Our-Stars-audiobook/dp/B006VPAXQY/ref=tmm_aud_swatch_0?_encoding=UTF8&qid=1595644554&sr=8-2">Audiobook</a></h3>
-          <h3><a href="https://www.amazon.com/Fault-Our-Stars-John-Green/dp/014242417X/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1595644554&sr=8-2">Purchase Paperbook</a></h3>
-          <h3><a href="https://www.amazon.com/Fault-Our-Stars-John-Green/dp/0525478817/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1595644554&sr=8-2">Purchase Hardcover</a></h3>
-          <h3><a href="https://www.amazon.com/Fault-Our-Stars-John-Green-ebook/dp/B005ZOBNOI/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=1595644554&sr=8-2">Purchase E-Book</a></h3>
+          <h3><a href="https://www.amazon.com/Fahrenheit-451-Ray-Bradbury-audiobook/dp/B00M4OO96Q/ref=tmm_aud_swatch_0?_encoding=UTF8&qid=1595642716&sr=8-2">Audiobook</a></h3>
+          <h3><a href="https://www.amazon.com/Fahrenheit-451-Ray-Bradbury/dp/1451673310/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1595642716&sr=8-2">Purchase Paperback</a></h3>
+          <h3><a href="https://www.amazon.com/Fahrenheit-451-Ray-Bradbury/dp/1451673264/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1595642716&sr=8-2">Purchase Hardcover</a></h3>
           <h2>Free Resource(s)</h2>
-          <h3><a href="https://www.youtube.com/watch?v=BxyjfTSXw5U">Audiobook</a></h3>
-          <h3><a href="https://pdfduck.com/the-fault-in-our-stars-by-john-green/">E-Book</a></h3>
+          <h3><a href="https://www.youtube.com/watch?v=PWjMBQis8ow">Audiobook</a></h3>
+          <h3><a href="https://www.fsusd.org/cms/lib03/CA01001943/Centricity/Domain/2034/Fahrenheit%20451.pdf">E-Book</a></h3>
         </div>
       </div>
     </div>
