--- a/books/prideandprejudice.html
+++ b/books/prideandprejudice.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Template | BookStrap © </title>
+    <title>Pride & Prejudice | BookStrap © </title>
     <link href="../style.css" rel="stylesheet" type="text/css"/>
     <link href="css.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque&display=swap" rel="stylesheet">
@@ -33,119 +33,37 @@
       </div>
     </div>
     <div class="template" >
-      <!-- Cover link in ('LINK')-->
+      <!-- Book Cover -->
       <div class="left_temp" style="background-image: url('https://prodimage.images-bn.com/pimages/9781499369748_p0_v3_s1200x630.jpg');">
       </div>
       <div class="right_temp">
         <div class="tittle">
-          <!-- Title in h2 -->
+          <!-- Title -->
           <h2>Pride and Prejudice</h2>
           <h3 style="margin-left:20px; margin-top:-10px">
             by Jane Austen
           </h3>
         </div>
         <div class="genres">
-          <!-- Link the genres WITH CLASS LINKY -->
+          <!-- Genre -->
           <h3 style="padding-left: 80px;"><a class="linky" href="../romance.html">Romance</a></h3>
-          <!-- HREFS Separate with comma if more than 1
-          <a class="linky" href="../mystery.html">Mystery</a>
-          <a class="linky" href="../thriller.html">Thriller</a>
-          <a class="linky" href="../classic.html">Classic</a>
-          <a class="linky" href="../fantasy.html">Fantasy</a>
-          <a class="linky" href="../fic.html">Fiction</a>
-          <a class="linky" href="../horror.html">Horror</a>
-          <a class="linky" href="../mystery.html">Mystery</a>
-          <a class="linky" href="../novel.html">Graphic Novels/Comics</a>
-          <a class="linky" href="../romance.html">Romance</a>
-          <a class="linky" href="../sci-fi">Sci-Fi</a>
-          <a class="linky" href="../ya.html">Young Adult</a>
-          -->
-
         </div>
         <div class="desc">
-          <!-- Summary/Black Blurb in p -->
+          <!-- Black Blurb in p -->
           <p>
             Since its immediate success in 1813, Pride and Prejudice has remained one of the most popular novels in the English language. Jane Austen called this brilliant work "her own darling child" and its vivacious heroine, Elizabeth Bennet, "as delightful a creature as ever appeared in print." The romantic clash between the opinionated Elizabeth and her proud beau, Mr. Darcy, is a splendid performance of civilized sparring. And Jane Austen's radiant wit sparkles as her characters dance a delicate quadrille of flirtation and intrigue, making this book the most superb comedy of manners of Regency England.
           </p>
         <div>
-        <!--<div class="resources">
-          <h3>Audiobook</h3>
-          <a href="">Audiobook</a>
-          <h3>Purchase Paperbook</h3>
-          <a href=""></a>
-          <h3>Purchase Hardcover</h3>
-          <a href=""></a>
-          <br><br>
-          <h3>Free Resources</h3>
-          
-        </div>-->
-
-
-
-
-
-        <!-- 
-          Ben
-thewickedking.html - The Wicked King            
-thesilentpatient.html - The Silent Patient
-recursion.html - Recursion
-thetyrantstomb.html - The Tyrant’s Tomb
-pumpkinheads.html - Pumpkinheads
-daisyjonesandthesix.html - Daisy Jones and The Six
-theheartbreakers.html - The Heartbreakers
-thirteengifts.html - 13 Gifts
-thefaultinourstars.html - The Fault In Our Stars
-thephilosopherstone.html - The Philosopher’s Stone
-thefellowshipofthering.html - The Fellowship of The Ring
-prideandprejudice.html - Pride & Prejudice
-thehobbit.html - The Hobbit
-fahrenheit451.html - Fahrenheit 451
-lordoftheflies.html - Lord Of The Flies
-kiterunner.html - Kite Runner
-            Max
-theglasshotel.html - The Glass Hotel
-darlingrosegold.html - Darling Rose Gold
-mrnobody.html - Mr. Nobody
-thevanishedbirds.html - The Vanished Birds
-longbrightriver.html - Long Bright River
-thecitywebecame.html - The City We Became
-thekingdomofback.html - The Kingdom of Back
-behindeverylie.html - Behind Every Lie
-thecallofthewild.html - The Call of The Wild
-nineteeneightyfour.html - 1984
-thegodfather.html - The Godfather
-tokillamockingbird.html - To Kill A Mockingbird
-thecatcherintherye.html - The Catcher In The Rye
-thenameofthewind.html - The Name of the Wind
-twilight.html - Twilight
-          Malika
-thegameofthrones.html - A Game of Thrones
-chosenones.html - Chosen Ones
-avatar.html - Avatar
-thebookthief.html - The Book Thief
-wewishyouluck.html - We Wish You Luck
-thepapergirlofparis.html - The Paper Girl Of Paris
-thecardboardkingdom.html - The Cardboard Kingdom
-herperfectlife.html - Her Perfect Life
-thefirstkisshypothesis.html - The First Kiss Hypothesis
-strangeplanet.html - Strange Planet
-happily.html - Happily Ever After & Everything In Between
-primer.html - Primer
-broughtme.html - You Brought Me The Ocean
-shout.html - Shout
-        Christine
-thetestaments.html - The Testaments
-theinstitute.html - The Institute
-thehungergames.html - The Hunger Games
-theguidethegalaxy.html - The Hitchhiker’s Guide To The Galaxy
-theothermrs.html - The Other Mrs.
-thehateugive.html - The Hate U Give
-lookingforalaska.html - Looking For Alaska
-theperks.html - The Perks of Being A WallFlower
-
-
-
--->
+        <div class="resources">
+          <h2>Resources<h2>
+          <h3><a href="https://www.amazon.com/Pride-Prejudice-Classic-Tales/dp/B07CV2ZZM1/ref=tmm_aud_swatch_0?_encoding=UTF8&qid=1595643690&sr=1-1">Audiobook</a></h3>
+          <h3><a href="https://www.amazon.com/Pride-Prejudice-Dover-Thrift-Study/dp/0486475646/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1595643690&sr=1-1">Purchase Paperback</a></h3>
+          <h3><a href="https://www.amazon.com/Pride-Prejudice-Jane-Austen-dp-190962165X/dp/190962165X/ref=mt_other?_encoding=UTF8&me=&qid=1595643690">Purchase Hardcover</a></h3>
+          <h3><a href="https://www.amazon.com/Pride-Prejudice-Jane-Austen-ebook/dp/B078C73DS4/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=1595643690&sr=1-1">Purchase E-Books</a></h3>
+          <h2>Free Resource(s)</h2>
+          <h3><a href="https://www.youtube.com/watch?v=eVHu5-n69qQ">Audiobook</a></h3>
+          <h3><a href="https://pdfduck.com/pride-and-prejudice-by-jane-austen/">E-Book</a></h3>
+        </div>
       </div>
     </div>
   </body>
