--- a/books/thecallofthewild.html
+++ b/books/thecallofthewild.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>The Fault In Our Stars | BookStrap © </title>
+    <title>The Call of the Wild | BookStrap © </title>
     <link href="../style.css" rel="stylesheet" type="text/css"/>
     <link href="css.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque&display=swap" rel="stylesheet">
@@ -33,36 +33,36 @@
       </div>
     </div>
     <div class="template" >
-      <!-- Cover link in ('LINK')-->
-      <div class="left_temp" style="background-image: url('https://images-na.ssl-images-amazon.com/images/I/81a4kCNuH+L.jpg');">
+      <!-- Book Cover-->
+      <div class="left_temp" style="background-image: url('https://www.penguin.co.uk/content/dam/prh/books/595/59518/9780141321059.jpg.transform/PRHDesktopWide_small/image.jpg');">
       </div>
       <div class="right_temp">
         <div class="tittle">
           <!-- Title -->
-          <h2>The Fault in Our Stars</h2>
+          <h2>The Call of the Wild</h2>
           <h3 style="margin-left:20px; margin-top:-10px">
-            by John Green
+            by Jack London
           </h3>
         </div>
         <div class="genres">
           <!-- Genres -->
-          <h3 style="padding-left: 80px;"><a class="linky" href="../fic.html">Fiction</a>, <a class="linky" href="../romance.html">Romance</a>, <a class="linky" href="../ya.html">Young Adult</a></h3>
+          <h3 style="padding-left: 80px;"><a class="linky" href="../classic.html">Classic</a></h3>
         </div>
         <div class="desc">
           <!-- Black Blurb in p -->
           <p>
-            Despite the tumor-shrinking medical miracle that has bought her a few years, Hazel has never been anything but terminal, her final chapter inscribed upon diagnosis. But when a gorgeous plot twist named Augustus Waters suddenly appears at Cancer Kid Support Group, Hazel's story is about to be completely rewritten.
+            First published in 1903, The Call of the Wild is regarded as Jack London's masterpiece. Based on London's experiences as a gold prospector in the Canadian wilderness and his ideas about nature and the struggle for existence, The Call of the Wild is a tale about unbreakable spirit and the fight for survival in the frozen Alaskan Klondike.
           </p>
         <div>
         <div class="resources">
           <h2>Resources<h2>
-          <h3><a href="https://www.amazon.com/The-Fault-in-Our-Stars-audiobook/dp/B006VPAXQY/ref=tmm_aud_swatch_0?_encoding=UTF8&qid=1595644554&sr=8-2">Audiobook</a></h3>
-          <h3><a href="https://www.amazon.com/Fault-Our-Stars-John-Green/dp/014242417X/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1595644554&sr=8-2">Purchase Paperbook</a></h3>
-          <h3><a href="https://www.amazon.com/Fault-Our-Stars-John-Green/dp/0525478817/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1595644554&sr=8-2">Purchase Hardcover</a></h3>
-          <h3><a href="https://www.amazon.com/Fault-Our-Stars-John-Green-ebook/dp/B005ZOBNOI/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=1595644554&sr=8-2">Purchase E-Book</a></h3>
+          <h3><a href="https://www.amazon.com/The-Call-of-Wild-Jack-London-audiobook/dp/B003KWL5Z4/ref=tmm_aud_swatch_0?_encoding=UTF8&qid=&sr=">Audiobook</a></h3>
+          <h3><a href="https://www.amazon.com/Call-Wild-Jack-London/dp/1945644516/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr=">Purchase Paperback</a></h3>
+          <h3><a href="https://www.amazon.com/Call-Wild-Jack-London/dp/0027594556">Purchase Hardcover</a></h3>
+          <h3><a href="https://www.amazon.com/Call-Wild-Jack-London-ebook/dp/B07VRDYFN2/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=&sr=">Purchase E-Book</a></h3>
           <h2>Free Resource(s)</h2>
-          <h3><a href="https://www.youtube.com/watch?v=BxyjfTSXw5U">Audiobook</a></h3>
-          <h3><a href="https://pdfduck.com/the-fault-in-our-stars-by-john-green/">E-Book</a></h3>
+          <h3><a href="https://www.youtube.com/watch?v=gKUUues3xAw">Audiobook</a></h3>
+          <h3><a href="https://www.ibiblio.org/ebooks/London/Call%20of%20Wild.pdf">E-Book</a></h3>
         </div>
       </div>
     </div>
