--- a/books/thefellowshipofthering.html
+++ b/books/thefellowshipofthering.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Template | BookStrap © </title>
+    <title>The Fellowship of the Ring | BookStrap © </title>
     <link href="../style.css" rel="stylesheet" type="text/css"/>
     <link href="css.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque&display=swap" rel="stylesheet">
@@ -33,123 +33,41 @@
       </div>
     </div>
     <div class="template" >
-      <!-- Cover link in ('LINK')-->
+      <!-- Book Cover -->
       <div class="left_temp" style="background-image: url('https://m.media-amazon.com/images/I/41kUPvqlguL.jpg');">
       </div>
       <div class="right_temp">
         <div class="tittle">
-          <!-- Title in h2 -->
+          <!-- Title -->
           <h2>The Fellowship of the Ring</h2>
           <h3 style="margin-left:20px; margin-top:-10px">
             by J.R.R. Tolken
           </h3>
         </div>
         <div class="genres">
-          <!-- Link the genres WITH CLASS LINKY -->
-          <h3 style="padding-left: 80px;"><a class="linky" href="../fantasy.html">Fantasy</a></h3>
-          <!-- HREFS Separate with comma if more than 1
-          <a class="linky" href="../mystery.html">Mystery</a>
-          <a class="linky" href="../thriller.html">Thriller</a>
-          <a class="linky" href="../classic.html">Classic</a>
-          <a class="linky" href="../fantasy.html">Fantasy</a>
-          <a class="linky" href="../fic.html">Fiction</a>
-          <a class="linky" href="../horror.html">Horror</a>
-          <a class="linky" href="../mystery.html">Mystery</a>
-          <a class="linky" href="../novel.html">Graphic Novels/Comics</a>
-          <a class="linky" href="../romance.html">Romance</a>
-          <a class="linky" href="../sci-fi">Sci-Fi</a>
-          <a class="linky" href="../ya.html">Young Adult</a>
-          -->
-
+          <!-- Genre -->
+          <h3 style="padding-left: 80px;"><a class="linky" href="../fantasy.html">Fantasy</a>, <a class="linky" href="../fic.html">Fiction</a></h3>
         </div>
         <div class="desc">
-          <!-- Summary/Black Blurb in p -->
+          <!-- Black Blurb in p -->
           <p>
             One Ring to rule them all, One Ring to find them, One Ring to bring them all and in the darkeness bind them<br><br>
 
-In ancient times the Rings of Power were crafted by the Elven-smiths, and Sauron, The Dark Lord, forged the One Ring, filling it with his own power so that he could rule all others. But the One Ring was taken from him, and though he sought it throughout Middle-earth, it remained lost to him. After many ages it fell into the hands of Bilbo Baggins, as told in The Hobbit.<br><br>
+            In ancient times the Rings of Power were crafted by the Elven-smiths, and Sauron, The Dark Lord, forged the One Ring, filling it with his own power so that he could rule all others. But the One Ring was taken from him, and though he sought it throughout Middle-earth, it remained lost to him. After many ages it fell into the hands of Bilbo Baggins, as told in The Hobbit.<br><br>
 
-In a sleepy village in the Shire, young Frodo Baggins finds himself faced with an immense task, as his elderly cousin Bilbo entrusts the Ring to his care. Frodo must leave his home and make a perilous journey across Middle-earth to the Cracks of Doom, there to destroy the Ring and foil the Dark Lord in his evil purpose.
+            In a sleepy village in the Shire, young Frodo Baggins finds himself faced with an immense task, as his elderly cousin Bilbo entrusts the Ring to his care. Frodo must leave his home and make a perilous journey across Middle-earth to the Cracks of Doom, there to destroy the Ring and foil the Dark Lord in his evil purpose.
           </p>
         <div>
-        <!--<div class="resources">
-          <h3>Audiobook</h3>
-          <a href="">Audiobook</a>
-          <h3>Purchase Paperbook</h3>
-          <a href=""></a>
-          <h3>Purchase Hardcover</h3>
-          <a href=""></a>
-          <br><br>
-          <h3>Free Resources</h3>
-          
-        </div>-->
-
-
-
-
-
-        <!-- 
-          Ben
-thewickedking.html - The Wicked King            
-thesilentpatient.html - The Silent Patient
-recursion.html - Recursion
-thetyrantstomb.html - The Tyrant’s Tomb
-pumpkinheads.html - Pumpkinheads
-daisyjonesandthesix.html - Daisy Jones and The Six
-theheartbreakers.html - The Heartbreakers
-thirteengifts.html - 13 Gifts
-thefaultinourstars.html - The Fault In Our Stars
-thephilosopherstone.html - The Philosopher’s Stone
-thefellowshipofthering.html - The Fellowship of The Ring
-prideandprejudice.html - Pride & Prejudice
-thehobbit.html - The Hobbit
-fahrenheit451.html - Fahrenheit 451
-lordoftheflies.html - Lord Of The Flies
-kiterunner.html - Kite Runner
-            Max
-theglasshotel.html - The Glass Hotel
-darlingrosegold.html - Darling Rose Gold
-mrnobody.html - Mr. Nobody
-thevanishedbirds.html - The Vanished Birds
-longbrightriver.html - Long Bright River
-thecitywebecame.html - The City We Became
-thekingdomofback.html - The Kingdom of Back
-behindeverylie.html - Behind Every Lie
-thecallofthewild.html - The Call of The Wild
-nineteeneightyfour.html - 1984
-thegodfather.html - The Godfather
-tokillamockingbird.html - To Kill A Mockingbird
-thecatcherintherye.html - The Catcher In The Rye
-thenameofthewind.html - The Name of the Wind
-twilight.html - Twilight
-          Malika
-thegameofthrones.html - A Game of Thrones
-chosenones.html - Chosen Ones
-avatar.html - Avatar
-thebookthief.html - The Book Thief
-wewishyouluck.html - We Wish You Luck
-thepapergirlofparis.html - The Paper Girl Of Paris
-thecardboardkingdom.html - The Cardboard Kingdom
-herperfectlife.html - Her Perfect Life
-thefirstkisshypothesis.html - The First Kiss Hypothesis
-strangeplanet.html - Strange Planet
-happily.html - Happily Ever After & Everything In Between
-primer.html - Primer
-broughtme.html - You Brought Me The Ocean
-shout.html - Shout
-        Christine
-thetestaments.html - The Testaments
-theinstitute.html - The Institute
-thehungergames.html - The Hunger Games
-theguidethegalaxy.html - The Hitchhiker’s Guide To The Galaxy
-theothermrs.html - The Other Mrs.
-thehateugive.html - The Hate U Give
-lookingforalaska.html - Looking For Alaska
-theperks.html - The Perks of Being A WallFlower
-
-
-
--->
+        <div class="resources">
+          <h2>Resources<h2>
+          <h3><a href="https://www.amazon.com/The-Fellowship-of-Ring-audiobook/dp/B0099SNQYG/ref=tmm_aud_swatch_0?_encoding=UTF8&qid=1595644642&sr=1-1">Audiobook</a></h3>
+          <h3><a href="https://www.amazon.com/Fellowship-Ring-Being-First-Rings/dp/0618574948/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1595644642&sr=1-1">Purchase Paperback</a></h3>
+          <h3><a href="https://www.amazon.com/Fellowship-Ring-Being-First-Rings/dp/0395489318/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1595644642&sr=1-1">Purchase Hardcover</a></h3>
+          <h3><a href="https://www.amazon.com/Fellowship-Ring-Being-First-Rings-ebook/dp/B007978NPG/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=1595644642&sr=1-1">Purchase E-Books</a></h3>
+          <h2>Free Resource(s)</h2>
+          <h3><a href="https://www.youtube.com/watch?v=4VLazGajzKc">Audiobook</a></h3>
+          <h3><a href="https://largepdf.com/the-fellowship-of-the-ring-being-the-first-part-of-the-lord-of-the-rings/">E-Book</a></h3>
+        </div>
       </div>
     </div>
   </body>
