--- a/books/thegameofthrones.html
+++ b/books/thegameofthrones.html
@@ -33,48 +33,39 @@
       </div>
     </div>
     <div class="template" >
-      <!-- Cover link in ('LINK')-->
-      <div class="left_temp" style="background-image: url('https://images-na.ssl-images-amazon.com/images/I/51in6gTMWnL._SX331_BO1,204,203,200_.jpg');">
+      <!-- Book Cover -->
+      <div class="left_temp" style="background-image: url('https://images-na.ssl-images-amazon.com/images/I/91dSMhdIzTL.jpg');">
       </div>
       <div class="right_temp">
         <div class="tittle">
-          <!-- Title in h2 -->
+          <!-- Title -->
           <h2>A Game of Thrones</h2>
           <h3 style="margin-left:20px; margin-top:-10px">
             by George R.R. Martin
           </h3>
         </div>
         <div class="genres">
-          <!-- Link the genres WITH CLASS LINKY -->
+          <!-- Genres -->
           <h3 style="padding-left: 80px;"><a class="linky" href="../fantasy.html">Fantasy</a></h3>
-          <!-- HREFS
-          <a href="../mystery.html">Mystery</a>
-          <a href="../thriller.html">Thriller</a>
-          <a href="../classic.html">Classic</a>
-          <a href="../"></a>
-          <a href="../"></a>
-          <a href="../"></a>
-          <a href="../"></a>
-          -->
-
         </div>
         <div class="desc">
           <!-- Summary/Black Blurb in p -->
           <p>
-            Game of Thrones is an HBO series that tells the story of a medieval country's civil war.
+            Long ago, in a time forgotten, a preternatural event threw the seasons out of balance. In a land where summers can last decades and winters a lifetime, trouble is brewing. The cold is returning, and in the frozen wastes to the north of Winterfell, sinister and supernatural forces are massing beyond the kingdom’s protective Wall. At the center of the conflict lie the Starks of Winterfell, a family as harsh and unyielding as the land they were born to. Sweeping from a land of brutal cold to a distant summertime kingdom of epicurean plenty, here is a tale of lords and ladies, soldiers and sorcerers, assassins and bastards, who come together in a time of grim omens.<br><br>
+
+            Here an enigmatic band of warriors bear swords of no human metal; a tribe of fierce wildlings carry men off into madness; a cruel young dragon prince barters his sister to win back his throne; and a determined woman undertakes the most treacherous of journeys. Amid plots and counterplots, tragedy and betrayal, victory and terror, the fate of the Starks, their allies, and their enemies hangs perilously in the balance, as each endeavors to win that deadliest of conflicts: the game of thrones.
           </p>
         <div>
-        <!--<div class="resources">
-          <h3>Audiobook</h3>
-          <a href="">Audiobook</a>
-          <h3>Purchase Paperbook</h3>
-          <a href=""></a>
-          <h3>Purchase Hardcover</h3>
-          <a href=""></a>
-          <br><br>
-          <h3>Free Resources</h3>
-          
-        </div>-->
+        <div class="resources">
+          <h2>Resources<h2>
+          <h3><a href="https://www.amazon.com/A-Game-of-Thrones-audiobook/dp/B0001DBI1Q/ref=tmm_aud_swatch_0?_encoding=UTF8&qid=1595690455&sr=1-1">Audiobook</a></h3>
+          <h3><a href="https://www.amazon.com/Game-Thrones-Song-Fire-Book/dp/0553386794/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1595690455&sr=1-1">Purchase Paperback</a></h3>
+          <h3><a href="https://www.amazon.com/Game-Thrones-Song-Ice-Fire/dp/0553103547/ref=sr_1_1?dchild=1&keywords=Game+of+Thrones&qid=1595690455&refinements=p_n_feature_browse-bin%3A2656020011&s=books&sr=1-1">Purchase Hardcover</a></h3>
+          <h3><a href="https://www.amazon.com/Game-Thrones-Song-Fire-Book-ebook/dp/B000QCS8TW/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=1595690455&sr=1-1">Purchase E-Book</a></h3>
+          <h2>Free Resource(s)</h2>
+          <h3><a href="https://www.youtube.com/watch?v=XcA7hzCVt2Q">Audiobook</a></h3>
+          <h3><a href="https://www.nothuman.net/images/files/discussion/2/1815b71a2e633176b1c509f3a186605b.pdf">E-Book</a></h3>
+        </div>
       </div>
     </div>
   </body>
