--- a/books/thehungergames.html
+++ b/books/thehungergames.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>The Testaments | BookStrap © </title>
+    <title>The Hunger Games | BookStrap © </title>
     <link href="../style.css" rel="stylesheet" type="text/css"/>
     <link href="css.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque&display=swap" rel="stylesheet">
@@ -34,19 +34,19 @@
     </div>
     <div class="template" >
       <!-- Cover link in ('LINK')-->
-      <div class="left_temp" style="background-image: url('https://cdn.glitch.com/82af02a2-d7b4-4dc8-a00b-c734d75ddef6%2Fed6e080c-16d1-4caf-82d3-3c36c43881ff.image.png?v=1595274803820');">
+      <div class="left_temp" style="background-image: url('https://images-na.ssl-images-amazon.com/images/I/61JfGcL2ljL.jpg');">
       </div>
       <div class="right_temp">
         <div class="tittle">
           <!-- Title in h2 -->
-          <h2>The Testaments</h2>
+          <h2>The Hunger Games</h2>
           <h3 style="margin-left:20px; margin-top:-10px">
-            by Margaret Atwood
+            by Suzanne Collins
           </h3>
         </div>
         <div class="genres">
           <!-- Link the genres WITH CLASS LINKY -->
-          <h3 style="padding-left: 80px;"></h3><a class="linky" href="../sci-fi.html"></a>Science Fiction</h3>
+          <h3 style="padding-left: 80px;"></h3><a class="linky" href="../sci-fi.html">Science Fiction</a></h3>
           <!-- HREFS Separate with comma if more than 1
           <a class="linky" href="../mystery.html">Mystery</a>
           <a class="linky" href="../thriller.html">Thriller</a>
@@ -65,17 +65,17 @@
         <div class="desc">
           <!-- Summary/Black Blurb in p -->
           <p>
-More than fifteen years after the events of The Handmaid's Tale, the theocratic regime of the Republic of Gilead maintains its grip on power, but there are signs it is beginning to rot from within. At this crucial moment, the lives of three radically different women converge, with potentially explosive results.
-Two have grown up as part of the first generation to come of age in the new order. The testimonies of these two young women are joined by a third: Aunt Lydia.  Her complex past and uncertain future unfold in surprising and pivotal ways.
-With The Testaments, Margaret Atwood opens up the innermost workings of Gilead, as each woman is forced to come to terms with who she is, and how far she will go for what she believes.
+            The Hunger Games begins on the day of the reaping in District 12. Katniss Everdeen, the story's 16-year-old narrator, sets out to meet her friend Gale so they can do some hunting and gathering before the reaping that afternoon. As Katniss makes her way from her home to the Meadow and, finally, to the woods, where people of the district are forbidden to go, we learn about Katniss' life in the impoverished part of her district, the Seam, and her family. She thinks about her sister Prim, who is 4 years younger, and her mother, both of whom have depended upon Katniss for survival ever since Katniss' father died in a mine explosion when she was 11.
+
+The reaping is a nerve-wracking time because it determines which boy and girl, ages 12 to 18, will serve as the district's tributes in the Hunger Games. Two tributes are drawn in each of the 12 districts, and those tributes are sent to an arena where they fight until only one tribute remains alive. The victor gets to return home, and the victor's district is showered with gifts — namely food. The Games, put on by the Capitol, are meant to punish the 12 districts of Panem as well as to remind them of the Dark Days and how the 13th district was obliterated for its uprising against the tyrannical and cruel Capitol.
           </p>
         <div>
         <div class="resources">
           <h2>Resources<h2>
-          <h3><a href="">Audiobook</a></h3>
-          <h3><a href="">Purchase Paperbook</a></h3>
-          <h3><a href="">Purchase Hardcover</a></h3>
-          <h3><a href="">Purchase E-Books</a></h3>
-          <h3><a href="">Free Resources</a></h3>
+          <h3><a href="https://www.amazon.com/Hunger-Games-Special-Edition-audiobook/dp/B07HHJ7669/ref=sr_1_2?dchild=1&keywords=the+hunger+games&qid=1595645397&s=books&sr=1-2">Audiobook</a></h3>
+          <h3><a href="https://www.amazon.com/Hunger-Games-Book-1/dp/0439023521/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1595645397&sr=1-2">Purchase Paperback</a></h3>
+          <h3><a href="https://www.amazon.com/Hunger-Games-Book/dp/0439023483/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1595645397&sr=1-2">Purchase Hardcover</a></h3>
+          <h3><a href="https://www.amazon.com/Hunger-Games-Trilogy-Book-ebook/dp/B002MQYOFW/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=1595645397&sr=1-2">Purchase E-Books</a></h3>
+          <h3><a href="https://docs.google.com/viewer?a=v&pid=sites&srcid=c21jc3R1ZGVudHMuY2F8bXItbGFsb25kZS1zLWNsYXNzfGd4OmNiOWE1MjhlZDk5ZWEwYg">Free Resource</a></h3>
           
         </div>
