--- a/books/theinstitute.html
+++ b/books/theinstitute.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>The Testaments | BookStrap © </title>
+    <title>The Institute | BookStrap © </title>
     <link href="../style.css" rel="stylesheet" type="text/css"/>
     <link href="css.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque&display=swap" rel="stylesheet">
@@ -34,19 +34,19 @@
     </div>
     <div class="template" >
       <!-- Cover link in ('LINK')-->
-      <div class="left_temp" style="background-image: url('https://cdn.glitch.com/82af02a2-d7b4-4dc8-a00b-c734d75ddef6%2Fed6e080c-16d1-4caf-82d3-3c36c43881ff.image.png?v=1595274803820');">
+      <div class="left_temp" style="background-image: url('https://cdn.glitch.com/82af02a2-d7b4-4dc8-a00b-c734d75ddef6%2F649bc535-b212-4176-8ae1-025fe4be5389.image.png?v=1595275620767');">
       </div>
       <div class="right_temp">
         <div class="tittle">
           <!-- Title in h2 -->
-          <h2>The Testaments</h2>
+          <h2>The Institute</h2>
           <h3 style="margin-left:20px; margin-top:-10px">
-            by Margaret Atwood
+            by Stephen King
           </h3>
         </div>
         <div class="genres">
           <!-- Link the genres WITH CLASS LINKY -->
-          <h3 style="padding-left: 80px;"></h3><a class="linky" href="../sci-fi.html"></a>Science Fiction</h3>
+          <h3 style="padding-left: 80px";></h3><a class="linky" href="../sci-fi.html">Science Fiction</a></h3>
           <!-- HREFS Separate with comma if more than 1
           <a class="linky" href="../mystery.html">Mystery</a>
           <a class="linky" href="../thriller.html">Thriller</a>
@@ -65,9 +65,11 @@
         <div class="desc">
           <!-- Summary/Black Blurb in p -->
           <p>
-More than fifteen years after the events of The Handmaid's Tale, the theocratic regime of the Republic of Gilead maintains its grip on power, but there are signs it is beginning to rot from within. At this crucial moment, the lives of three radically different women converge, with potentially explosive results.
-Two have grown up as part of the first generation to come of age in the new order. The testimonies of these two young women are joined by a third: Aunt Lydia.  Her complex past and uncertain future unfold in surprising and pivotal ways.
-With The Testaments, Margaret Atwood opens up the innermost workings of Gilead, as each woman is forced to come to terms with who she is, and how far she will go for what she believes.
+            In the middle of the night, in a house on a quiet street in suburban Minneapolis, intruders silently murder Luke Ellis’s parents and load him into a black SUV. The operation takes less than two minutes. Luke will wake up at The Institute, in a room that looks just like his own, except there’s no window. And outside his door are other doors, behind which are other kids with special talents—telekinesis and telepathy—who got to this place the same way Luke did: Kalisha, Nick, George, Iris, and ten-year-old Avery Dixon. They are all in Front Half. Others, Luke learns, graduated to Back Half, “like the roach motel,” Kalisha says. “You check in, but you don’t check out.”
+
+In this most sinister of institutions, the director, Mrs. Sigsby, and her staff are ruthlessly dedicated to extracting from these children the force of their extranormal gifts. There are no scruples here. If you go along, you get tokens for the vending machines. If you don’t, punishment is brutal. As each new victim disappears to Back Half, Luke becomes more and more desperate to get out and get help. But no one has ever escaped from the Institute.
+
+As psychically terrifying as Firestarter, and with the spectacular kid power of It, The Institute is Stephen King’s gut-wrenchingly dramatic story of good vs. evil in a world where the good guys don’t always win.
           </p>
         <div>
         <div class="resources">
@@ -76,6 +78,6 @@ With The Testaments, Margaret Atwood opens up the innermost workings of Gilead, 
           <h3><a href="">Purchase Paperbook</a></h3>
           <h3><a href="">Purchase Hardcover</a></h3>
           <h3><a href="">Purchase E-Books</a></h3>
-          <h3><a href="">Free Resources</a></h3>
+          <h3><a href="">Free Resource</a></h3>
           
         </div>
