--- a/books/theothermrs.html
+++ b/books/theothermrs.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>The Testaments | BookStrap © </title>
+    <title>The Other Mrs. | BookStrap © </title>
     <link href="../style.css" rel="stylesheet" type="text/css"/>
     <link href="css.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque&display=swap" rel="stylesheet">
@@ -34,19 +34,19 @@
     </div>
     <div class="template" >
       <!-- Cover link in ('LINK')-->
-      <div class="left_temp" style="background-image: url('https://cdn.glitch.com/82af02a2-d7b4-4dc8-a00b-c734d75ddef6%2Fed6e080c-16d1-4caf-82d3-3c36c43881ff.image.png?v=1595274803820');">
+      <div class="left_temp" style="background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSWpniJvXcjgUtG75SIUAwyflLVa4wCcublEA&usqp=CAU');">
       </div>
       <div class="right_temp">
         <div class="tittle">
           <!-- Title in h2 -->
-          <h2>The Testaments</h2>
+          <h2>The Other Mrs.</h2>
           <h3 style="margin-left:20px; margin-top:-10px">
-            by Margaret Atwood
+            by Mary Kubica
           </h3>
         </div>
         <div class="genres">
           <!-- Link the genres WITH CLASS LINKY -->
-          <h3 style="padding-left: 80px;"></h3><a class="linky" href="../sci-fi.html"></a>Science Fiction</h3>
+          <h3 style="padding-left: 80px;"></h3><a class="linky" href="../thriller.html">Thriller</a></h3>
           <!-- HREFS Separate with comma if more than 1
           <a class="linky" href="../mystery.html">Mystery</a>
           <a class="linky" href="../thriller.html">Thriller</a>
@@ -65,10 +65,13 @@
         <div class="desc">
           <!-- Summary/Black Blurb in p -->
           <p>
-More than fifteen years after the events of The Handmaid's Tale, the theocratic regime of the Republic of Gilead maintains its grip on power, but there are signs it is beginning to rot from within. At this crucial moment, the lives of three radically different women converge, with potentially explosive results.
-Two have grown up as part of the first generation to come of age in the new order. The testimonies of these two young women are joined by a third: Aunt Lydia.  Her complex past and uncertain future unfold in surprising and pivotal ways.
-With The Testaments, Margaret Atwood opens up the innermost workings of Gilead, as each woman is forced to come to terms with who she is, and how far she will go for what she believes.
+            She tried to run, but she can't escape the other Mrs....
+
+Sadie and Will Foust have only just moved their family from bustling Chicago to small-town Maine when their neighbor Morgan Baines is found dead in her home. The murder rocks their tiny coastal island, but no one is more shaken than Sadie.
+
+But it’s not just Morgan’s death that has Sadie on edge. And as the eyes of suspicion turn toward the new family in town, Sadie is drawn deeper into the mystery of what really happened that dark and deadly night. But Sadie must be careful, for the more she discovers about Mrs. Baines, the more she begins to realize just how much she has to lose if the truth ever comes to light
           </p>
+
         <div>
         <div class="resources">
           <h2>Resources<h2>
@@ -76,6 +79,6 @@ With The Testaments, Margaret Atwood opens up the innermost workings of Gilead, 
           <h3><a href="">Purchase Paperbook</a></h3>
           <h3><a href="">Purchase Hardcover</a></h3>
           <h3><a href="">Purchase E-Books</a></h3>
-          <h3><a href="">Free Resources</a></h3>
+          <h3><a href="">Free Resource</a></h3>
           
         </div>
