--- a/books/theperks.html
+++ b/books/theperks.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>The Fault In Our Stars | BookStrap © </title>
+    <title>The Perks of Being a Wallflower | BookStrap © </title>
     <link href="../style.css" rel="stylesheet" type="text/css"/>
     <link href="css.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque&display=swap" rel="stylesheet">
@@ -34,37 +34,48 @@
     </div>
     <div class="template" >
       <!-- Cover link in ('LINK')-->
-      <div class="left_temp" style="background-image: url('https://images-na.ssl-images-amazon.com/images/I/81a4kCNuH+L.jpg');">
+      <div class="left_temp" style="background-image: url('LINK');">
       </div>
       <div class="right_temp">
         <div class="tittle">
-          <!-- Title -->
-          <h2>The Fault in Our Stars</h2>
+          <!-- Title in h2 -->
+          <h2>The Perks of Being a Wallflower</h2>
           <h3 style="margin-left:20px; margin-top:-10px">
-            by John Green
+            by Stephen Chbosky
           </h3>
         </div>
         <div class="genres">
-          <!-- Genres -->
-          <h3 style="padding-left: 80px;"><a class="linky" href="../fic.html">Fiction</a>, <a class="linky" href="../romance.html">Romance</a>, <a class="linky" href="../ya.html">Young Adult</a></h3>
+          <!-- Link the genres WITH CLASS LINKY -->
+          <h3 style="padding-left: 80px;"></h3><a class="linky" href="../ya.html"></a>Young Adult</h3>
+          <!-- HREFS Separate with comma if more than 1
+          <a class="linky" href="../mystery.html">Mystery</a>
+          <a class="linky" href="../thriller.html">Thriller</a>
+          <a class="linky" href="../classic.html">Classic</a>
+          <a class="linky" href="../fantasy.html">Fantasy</a>
+          <a class="linky" href="../fic.html">Fiction</a>
+          <a class="linky" href="../horror.html">Horror</a>
+          <a class="linky" href="../mystery.html">Mystery</a>
+          <a class="linky" href="../novel.html">Graphic Novels/Comics</a>
+          <a class="linky" href="../romance.html">Romance</a>
+          <a class="linky" href="../sci-fi">Sci-Fi</a>
+          <a class="linky" href="../ya.html">Young Adult</a>
+          -->
+
         </div>
         <div class="desc">
-          <!-- Black Blurb in p -->
+          <!-- Summary/Black Blurb in p -->
           <p>
-            Despite the tumor-shrinking medical miracle that has bought her a few years, Hazel has never been anything but terminal, her final chapter inscribed upon diagnosis. But when a gorgeous plot twist named Augustus Waters suddenly appears at Cancer Kid Support Group, Hazel's story is about to be completely rewritten.
+            Description
           </p>
         <div>
-        <div class="resources">
-          <h2>Resources<h2>
-          <h3><a href="https://www.amazon.com/The-Fault-in-Our-Stars-audiobook/dp/B006VPAXQY/ref=tmm_aud_swatch_0?_encoding=UTF8&qid=1595644554&sr=8-2">Audiobook</a></h3>
-          <h3><a href="https://www.amazon.com/Fault-Our-Stars-John-Green/dp/014242417X/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1595644554&sr=8-2">Purchase Paperbook</a></h3>
-          <h3><a href="https://www.amazon.com/Fault-Our-Stars-John-Green/dp/0525478817/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1595644554&sr=8-2">Purchase Hardcover</a></h3>
-          <h3><a href="https://www.amazon.com/Fault-Our-Stars-John-Green-ebook/dp/B005ZOBNOI/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=1595644554&sr=8-2">Purchase E-Book</a></h3>
-          <h2>Free Resource(s)</h2>
-          <h3><a href="https://www.youtube.com/watch?v=BxyjfTSXw5U">Audiobook</a></h3>
-          <h3><a href="https://pdfduck.com/the-fault-in-our-stars-by-john-green/">E-Book</a></h3>
-        </div>
-      </div>
-    </div>
-  </body>
-</html>
+        <!--<div class="resources">
+          <h3>Audiobook</h3>
+          <a href="">Audiobook</a>
+          <h3>Purchase Paperbook</h3>
+          <a href=""></a>
+          <h3>Purchase Hardcover</h3>
+          <a href=""></a>
+          <br><br>
+          <h3>Free Resources</h3>
+          
+        </div>-->
