--- a/books/thewickedking.html
+++ b/books/thewickedking.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Template | BookStrap © </title>
+    <title>The Wicked King | BookStrap © </title>
     <link href="../style.css" rel="stylesheet" type="text/css"/>
     <link href="css.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque&display=swap" rel="stylesheet">
@@ -33,40 +33,40 @@
       </div>
     </div>
     <div class="template" >
-      <!-- Cover link in ('LINK')-->
+      <!-- Book Cover-->
       <div class="left_temp" style="background-image: url('https://prodimage.images-bn.com/pimages/9780316310321_p0_v1_s550x406.jpg');">
       </div>
       <div class="right_temp">
         <div class="tittle">
-          <!-- Title in h2 -->
+          <!-- The Wicked King -->
           <h2>The Wicked King</h2>
           <h3 style="margin-left:20px; margin-top:-10px">
             by Holly Black
           </h3>
         </div>
         <div class="genres">
-          <!-- Link the genres WITH CLASS LINKY -->
-          <h3 style="padding-left: 80px;" class="linky"><a href="../fantasy.html">Fantasy</a>, <a href="../ya.html">Young Adult</a></p></h3>
+          <!-- Genres -->
+          <h3 style="padding-left: 80px;"><a class="linky" href="../fantasy.html">Fantasy</a>, <a class="linky" href="../ya.html">Young Adult</a></p></h3>
         </div>
         <div class="desc">
-          <!-- Summary/Black Blurb in p -->
+          <!-- Black Blurb in p -->
           <p>
             After the jaw-dropping revelation that Oak is the heir to Faerie, Jude must keep her brother safe. To do so, she has bound the wicked king, Cardan, to her, and made herself the power behind the throne. Navigating the constantly shifting political alliances of Faerie would be difficult enough if Cardan were easy to control. But he does everything in his power to humiliate and undermine her even as his fascination with her remains undiminished.<br><BR>
 
-When it becomes all too clear that someone close to Jude means to betray her, threatening her own life and the lives of everyone she loves, Jude must uncover the traitor and fight her own complicated feelings for Cardan to maintain control as a mortal in a Faerie world.
+            When it becomes all too clear that someone close to Jude means to betray her, threatening her own life and the lives of everyone she loves, Jude must uncover the traitor and fight her own complicated feelings for Cardan to maintain control as a mortal in a Faerie world.
           </p>
         <div>
-        <!--<div class="resources">
-          <h3>Audiobook</h3>
-          <a href="">Audiobook</a>
-          <h3>Purchase Paperbook</h3>
-          <a href=""></a>
-          <h3>Purchase Hardcover</h3>
-          <a href=""></a>
-          <br><br>
-          <h3>Free Resources</h3>
-          
-        </div>-->
+        <div class="resources">
+          <h2>Resources<h2>
+          <h3><a href="https://www.amazon.com/The-Wicked-King-Holly-Black-audiobook/dp/B07LGCFZ1J/ref=tmm_aud_swatch_0?_encoding=UTF8&qid=&sr=">Audiobook</a></h3>
+          <h3><a href="https://www.amazon.com/Wicked-King-Folk-Air/dp/0316310328/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr=">Purchase Paperback</a></h3>
+          <h3><a href="https://www.amazon.com/Wicked-King-Folk-Air/dp/0316310352/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=&sr=">Purchase Hardcover</a></h3>
+          <h3><a href="https://www.amazon.com/Wicked-King-Folk-Air-Book-ebook/dp/B07B8CFPSN/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=&sr=">Purchase E-Book</a></h3>
+          <h2>Free Resource(s)</h2>
+          <h3><a href="https://www.youtube.com/watch?v=XCGic6SPnRI">Audiobook</a></h3>
+          <h3><a href="https://continuous.epub.pub/epub/5c33dcce78951c0006ff2184">E-Book</a></h3>
+          <h3>
+        </div>
       </div>
     </div>
   </body>
