--- a/books/thirteengifts.html
+++ b/books/thirteengifts.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Template | BookStrap © </title>
+    <title>13 Gifts | BookStrap © </title>
     <link href="../style.css" rel="stylesheet" type="text/css"/>
     <link href="css.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque&display=swap" rel="stylesheet">
@@ -33,121 +33,38 @@
       </div>
     </div>
     <div class="template" >
-      <!-- Cover link in ('LINK')-->
+      <!-- Book Cover-->
       <div class="left_temp" style="background-image: url('https://images-na.ssl-images-amazon.com/images/I/71+nP8c5R9L.jpg');">
       </div>
       <div class="right_temp">
         <div class="tittle">
-          <!-- Title in h2 -->
+          <!-- Title -->
           <h2>13 Gifts</h2>
           <h3 style="margin-left:20px; margin-top:-10px">
             by Wendy Mass
           </h3>
         </div>
         <div class="genres">
-          <!-- Link the genres WITH CLASS LINKY -->
+          <!-- Genres -->
           <h3 style="padding-left: 80px;"><a class="linky" href="../fic.html">Fiction</a></h3>
-          <!-- HREFS Separate with comma if more than 1
-          <a class="linky" href="../mystery.html">Mystery</a>
-          <a class="linky" href="../thriller.html">Thriller</a>
-          <a class="linky" href="../classic.html">Classic</a>
-          <a class="linky" href="../fantasy.html">Fantasy</a>
-          <a class="linky" href="../fic.html">Fiction</a>
-          <a class="linky" href="../horror.html">Horror</a>
-          <a class="linky" href="../mystery.html">Mystery</a>
-          <a class="linky" href="../novel.html">Graphic Novels/Comics</a>
-          <a class="linky" href="../romance.html">Romance</a>
-          <a class="linky" href="../sci-fi">Sci-Fi</a>
-          <a class="linky" href="../ya.html">Young Adults</a>
-          -->
-
         </div>
         <div class="desc">
-          <!-- Summary/Black Blurb in p -->
+          <!-- Black Blurb in p -->
           <p>
-            Wendy Mass turns to another magical birthday: 13!<br><br>
-
-When Tara, a self-proclaimed shrinking violet, steals the school mascot, a goat, in order to make some friends with the popular crowd and gets caught, she gets herself in a heap of trouble. In addition, her parents decide that instead of taking her on their summer trip to Madagascar to study the courtship rituals of the Bamboo Lemur, she must go stay with her aunt, uncle, and bratty cousin Emily St. Claire in Willow Falls. Tara thinks it's a good time to start over; she'll be turning 13 after all, so she might as well make the best of it and perhaps even attempt to break out of her shell (in a non-criminal manner). What Tara doesn't know is that this charmed town has something big in store for her on her 13th birthday. It's not a typical birthday. But then again, nothing is Willow Falls is exactly typical!
+            When Tara, a self-proclaimed shrinking violet, steals the school mascot, a goat, in order to make some friends with the popular crowd and gets caught, she gets herself in a heap of trouble. In addition, her parents decide that instead of taking her on their summer trip to Madagascar to study the courtship rituals of the Bamboo Lemur, she must go stay with her aunt, uncle, and bratty cousin Emily St. Claire in Willow Falls. Tara thinks it's a good time to start over; she'll be turning 13 after all, so she might as well make the best of it and perhaps even attempt to break out of her shell (in a non-criminal manner). What Tara doesn't know is that this charmed town has something big in store for her on her 13th birthday. <br><br>
+            
+            It's not a typical birthday. But then again, nothing is Willow Falls is exactly typical!
           </p>
         <div>
-        <!--<div class="resources">
-          <h3>Audiobook</h3>
-          <a href="">Audiobook</a>
-          <h3>Purchase Paperbook</h3>
-          <a href=""></a>
-          <h3>Purchase Hardcover</h3>
-          <a href=""></a>
-          <br><br>
-          <h3>Free Resources</h3>
-          
-        </div>-->
-
-
-
-
-
-        <!-- 
-          Ben
-thewickedking.html - The Wicked King            
-thesilentpatient.html - The Silent Patient
-recursion.html - Recursion
-thetyrantstomb.html - The Tyrant’s Tomb
-pumpkinheads.html - Pumpkinheads
-daisyjonesandthesix.html - Daisy Jones and The Six
-theheartbreakers.html - The Heartbreakers
-thirteengifts.html - 13 Gifts
-thefaultinourstars.html - The Fault In Our Stars
-thephilosopherstone.html - The Philosopher’s Stone
-thefellowshipofthering.html - The Fellowship of The Ring
-prideandprejudice.html - Pride & Prejudice
-thehobbit.html - The Hobbit
-fahrenheit451.html - Fahrenheit 451
-lordoftheflies.html - Lord Of The Flies
-kiterunner.html - Kite Runner
-            Max
-theglasshotel.html - The Glass Hotel
-darlingrosegold.html - Darling Rose Gold
-mrnobody.html - Mr. Nobody
-thevanishedbirds.html - The Vanished Birds
-longbrightriver.html - Long Bright River
-thecitywebecame.html - The City We Became
-thekingdomofback.html - The Kingdom of Back
-behindeverylie.html - Behind Every Lie
-thecallofthewild.html - The Call of The Wild
-nineteeneightyfour.html - 1984
-thegodfather.html - The Godfather
-tokillamockingbird.html - To Kill A Mockingbird
-thecatcherintherye.html - The Catcher In The Rye
-thenameofthewind.html - The Name of the Wind
-twilight.html - Twilight
-          Malika
-thegameofthrones.html - A Game of Thrones
-chosenones.html - Chosen Ones
-avatar.html - Avatar
-thebookthief.html - The Book Thief
-wewishyouluck.html - We Wish You Luck
-thepapergirlofparis.html - The Paper Girl Of Paris
-thecardboardkingdom.html - The Cardboard Kingdom
-herperfectlife.html - Her Perfect Life
-thefirstkisshypothesis.html - The First Kiss Hypothesis
-strangeplanet.html - Strange Planet
-happily.html - Happily Ever After & Everything In Between
-primer.html - Primer
-broughtme.html - You Brought Me The Ocean
-shout.html - Shout
-        Christine
-thetestaments.html - The Testaments
-theinstitute.html - The Institute
-thehungergames.html - The Hunger Games
-theguidethegalaxy.html - The Hitchhiker’s Guide To The Galaxy
-theothermrs.html - The Other Mrs.
-thehateugive.html - The Hate U Give
-lookingforalaska.html - Looking For Alaska
-theperks.html - The Perks of Being A WallFlower
-
-
-
--->
+        <div class="resources">
+          <h2>Resources<h2>
+          <h3><a href="https://www.amazon.com/13-Gifts-Wendy-Mass-audiobook/dp/B005M2RU3G/ref=tmm_aud_swatch_0?_encoding=UTF8&qid=1595648873&sr=1-1">Audiobook</a></h3>
+          <h3><a href="https://www.amazon.com/13-Gifts-Novel-Willow-Falls/dp/0545310040/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1595648873&sr=1-1">Purchase Paperbook</a></h3>
+          <h3><a href="https://www.amazon.com/13-Gifts-Willow-Falls-Book-ebook/dp/B005KO6DWU/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=1595648873&sr=1-1">Purchase E-Books</a></h3>
+          <h2>Free Resource(s)<h2>
+          <h3><a href="https://listening-books.overdrive.com/media/624265">Audiobook</a></h3>
+          <h3><a href="https://mafiadoc.com/queue/13-gifts-willow-falls-pdf-by-wendy-mass-pdf59_59dfd39f1723dde5ca903186.html">E-Book</a></h3>
+        </div>
       </div>
     </div>
   </body>
